الخط, والصياغة والشكل, والفوتر,وزرار بيطلع,وحاجات

--- a/index.html
+++ b/index.html
@@ -713,11 +713,17 @@
             </div>
             <div class="col team">
                 <h3>فريق العمل</h3>
+
                 <a href="https://github.com/deku99hh" target="_blank">
                     <p>Abdelrahman Hassan Rashed</p>
                 </a>
-                <p>Karim Ashraf Batisha</p>
-                <p>Elsayed Shaaban Elzalbani</p>
+
+                <a href="https://github.com/deku99hh" target="_blank">
+                    <p>Mohamed Hisham Abu El _Makarem</p>
+                </a>
+
+                <p>  </p>
+
                 <p class="love">صُنِع بكل حب لأجل البحيرة ❤️</p>
             </div>
             <div class="col">
@@ -738,5 +744,8 @@
             © فريق ############# 2025
         </p>
     </footer>
+
+    <button id="scrollToTopBtn" title="Go to top">↑</button>
+    <script src="script/goUpButton.js"></script>
 </body>
 </html>
