--- a/specific-tabs/Wadi-El-Natrun.html
+++ b/specific-tabs/Wadi-El-Natrun.html
@@ -28,6 +28,7 @@
 
             <!-- المعلومات التفصيلية -->
             <h1 class="h11">دير الأنبا بيشوي</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">Monastery of Saint Bishoy</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -39,27 +40,37 @@
                     <p>يتميز المبنى بتصميم معماري فريد يجمع بين الأصالة والحداثة، حيث تظهر الواجهات الزجاجية الحديثة مع لمسات من الفن الإسلامي في الزخارف والنقوش. تبلغ سعة المسرح الرئيسي حوالي 1000 متفرج.</p>
                 </div> -->
 
-                <div class="detail-card">
-                    <h2> معلومات</h2>
-                    <p>
+<div class="detail-card">
+    <h2><i class="fas fa-church"></i> دير الأنبا بيشوي</h2>
+    <p>
+        يعد دير القديس الأنبا بيشوي أكبر الأديرة العامرة بوادي النطرون، وهو دير قبطي أرثوذكسي ذو أهمية تاريخية وروحية كبيرة،  
+        ويقع غرب دلتا النيل شمال مصر.
+    </p>
+</div>
 
-يعود إنشاء دير الأنبا بيشوي في بداياته الأولى كتجمع رهباني بقيادة الأنبا بيشوي إلى أواخر القرن الرابع الميلادي، وعاصر بناؤه القديس مقار الكبير. وكان آنذاك عبارة عن مجموعة قلالي (وهي مساكن الرهبان) وكنيسة في الوسط تحيط بالمغارة الصخرية التي عاش فيها الأنبا بيشوي وذلك دون بناء أسوار. وقد دُمرت هذه الكنيسة في القرن الخامس الميلادي بسبب غارة على الأديرة من الليبيين البدو عام 407؛ منذ 1618 سنوات. وعلى الرغم من إعادة بناءها؛ إلا أنها دُمرت مرة أخرى في الغارتين التاليتين عامي 434؛ منذ 1591 سنوات و444؛ منذ 1581 سنوات. ولقد تعرض أيضاً هذا الدير للتخريب أثناء غارة رابعة للبربر قرب نهاية القرن السادس الميلادي، على التجمعات الرهبانية بوادي النطرون، وكانت مبانيه الأساسية آنذاك هي الكنيسة والحصن. وقد أعيد بناؤهما في عهد البابا بنيامين الأول عام 645؛ منذ 1380 سنوات.
+<div class="detail-card">
+    <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
+    <p>
+        تأسس الدير في أواخر القرن الرابع الميلادي على يد الأنبا بيشوي، وعاصر القديس مقار الكبير.  
+        تعرض الدير للتدمير عدة مرات على يد الغزاة والبدو، وأُعيد بناؤه وترميمه مرات عديدة عبر العصور، بما في ذلك أعوام 645، 840، 1319م.
+    </p>
+</div>
 
-<br>
-وفي عام 817 م، تخرب الدير مرة أخرى أثناء غارة البربر الخامسة، ولكن تم تعميره وإصلاحه في عهد البابا يعقوب الأول، وأكل تعميره البابا يوساب الأول وأعاد أجساد القديسين الأنبا بيشوي والأنبا بولا الطموهي إلى الدير، كما أعاد بناء الكنيسة والدير بصفة عامة. لذا؛ فإن المبنى الرئيسي لكنيسة الدير الرئيسية الحالية يرجع إلى عام 840 م.
-<br>
+<div class="detail-card">
+    <h2><i class="fas fa-archway"></i> التطوير والمعمار</h2>
+    <p>
+        يشمل الدير قلالي الرهبان والكنيسة الرئيسية والمغارة الصخرية التي عاش فيها الأنبا بيشوي.  
+        في عهد البابا شنودة الثالث جرى تجديد القلالي، وبئر الماء، وإدخال الكهرباء، وإضافة 300 فدان من الصحراء لأغراض الاستصلاح.
+    </p>
+</div>
 
-وفي عام 1069؛ منذ 956 سنوات، تعرض الدير لغزو البربر اللواتيين. وفي عام 1319 م، تم ترميم الدير في عهد البابا بنيامين الثاني، وقد دفن في الجهة القبلية بالكنيسة الكبرى بالدير. وقد زار الدير عدد من الرحالة والمؤرخين الذين كتبوا عنه، أمثال المقريزي في القرن الخامس عشر الميلادي، وقد قال عنه أنه: كبير جدًا، ولكن لا يوجد شيء على حالته.
-
-<br>
-وفي عهد البابا شنودة الثالث، قام بحركة تجديد واسعة للدير، فقد أمر بتجديد القلالي، وأعاد ترميم بئر الماء الذي غسل فيه البربر سيوفهم بعد أن قتلوا شيوخ شهيت التسعة والأربعون، كما أضاف للدير قرابة 300 فداناً من الصحراء المحيطة به لأجل استصلاحها، بالإضافة إلى القلاية البطريركية الخاصة به، وأمر كذلك بإدخال الكهرباء للدير. يُذكر أنه قد تم طبخ وإعداد زيت الميرون في الدير خمس مرات من سبعة في عهده، وذلك في أعوام 1981 و1987 و1990 و1995 و2008 في عهده، لتوزيعه على الكنائس القبطية في مصر وخارجها.
-
-
-
-
-                    </p>
-
-                </div>
+<div class="detail-card">
+    <h2><i class="fas fa-tools"></i> الأنشطة الدينية والروحية</h2>
+    <p>
+        يُطبخ ويُعد زيت الميرون في الدير لخدمة الكنائس القبطية داخل مصر وخارجها، وقد جرى تحضيره خمس مرات في عهده.  
+        يمثل الدير مركزًا روحيًا هامًا للعبادة والتأمل، ويستمر في استقبال الرهبان والزوار الباحثين عن الهدوء والصلاة.
+    </p>
+</div>
 
 <!-- 
                 <div class="quote-box">
