--- a/specific-tabs/abkain.html
+++ b/specific-tabs/abkain.html
@@ -28,6 +28,7 @@
 
             <!-- المعلومات التفصيلية -->
             <h1 class="h11">تل الابقعين</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">Tel al-Abqa'in</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -39,29 +40,43 @@
                     <p>يتميز المبنى بتصميم معماري فريد يجمع بين الأصالة والحداثة، حيث تظهر الواجهات الزجاجية الحديثة مع لمسات من الفن الإسلامي في الزخارف والنقوش. تبلغ سعة المسرح الرئيسي حوالي 1000 متفرج.</p>
                 </div> -->
 
-                <div class="detail-card">
-                    <h2> معلومات</h2>
-                    <p>
+<div class="detail-card">
+    <h2><i class="fas fa-landmark"></i> تل الأبقعين</h2>
+    <p>
+        موقع أثري عسكري مهم بمركز حوش عيسى بمحافظة البحيرة، يضم ثكنات للجنود ومخازن للأسلحة والطعام من عصر الدولة الحديثة.
+    </p>
+</div>
 
-الكشف عن ثكنات عسكرية ومخازن للأسلحة بمنطقة آثار تل الأبقعين بمحافظة البحيرة
-<br>
-سيف من البرونز للملك رمسيس الثاني ولقى ودلائل أثرية تؤكد الأهمية التاريخية والأثرية للحصن
-<br>
-اكتشفت البعثة الأثرية المصرية التابعة للمجلس الأعلى للآثار برئاسة الدكتور أحمد سعيد الخرادلي، مجموعة من الوحدات المعمارية من الطوب اللبن لثكنات عسكرية للجنود ومخازن للأسلحة والطعام والمواد الغذائية من عصر الدولة الحديثة، وذلك أثناء أعمال الحفائر الأثرية بمنطقة آثار تل الأبقعين بمركز حوش عيسى بمحافظة البحيرة. كما تم الكشف عن العديد من اللقى الأثرية والأدوات الشخصية للجنود.
-<br>
-وأوضح الدكتور محمد إسماعيل خالد الأمين العام للمجلس الأعلى للآثار، على أهمية هذا الكشف حيث إنه يؤكد على الأهمية التاريخية والأثرية لحصن الأبقعين الذي يعد أحد نقاط التمركز العسكري للجيش المصري القديم على الطريق الحربي الغربي لحماية الحدود الشمالية الغربية لمصر من هجمات القبائل الليبية وشعوب البحر، مشيراً إلى أن الوحدات المعمارية المكتشفة ذات تخطيط منتظم ومقسمة إلى مجموعتين متماثلتين في التصميم النمطي المعماري يفصل بينهما ممر صغير، مما يدل على براعة المهندس المصري القديم وقدرته على استغلال عناصر البيئة المحيطة وتطويعها لخدمة أغراضه المختلفة.
-<br>
-ومن جانبه أوضح الدكتور أيمن عشماوي رئيس قطاع الآثار المصرية بالمجلس الأعلى للآثار، أن الدراسات الأولية اللقى الأثرية التي تم اكتشافها تؤكد استخدام بعض الوحدات المعمارية كمخازن لإمداد الجنود بالطعام والمؤن الغذائية يومياً، حيث عثر بداخلها على صوامع فردية كبيرة الحجم بداخلها بقايا أواني فخارية كبيرة للتخزين بها بقايا عظام أسماك وحيوانات وبعض من كسر، كما عثر أيضاً على أفران من الفخار ذات الشكل الإسطواني كانت تستخدم لطهي الطعام.
-<br>
-وقد عثرت البعثة عن سيف طويل من البرونز مزين بنقوش لخرطوش الملك رمسيس الثاني، بالإضافة إلى مجموعة من اللقى الأثرية التي تلقى الضوء على الأنشطة اليومية لقاطني الحصن، وفكرهم العقائدي والعسكري مثل الأسلحة المستخدمة في الحروب، وأدوات الصيد والزينة والنظافة الشخصية مثل مراود التكحيل من العاج وخرزات وجعارين من العقيق الأحمر والقيشاني، وتمائم الحماية.
-<br>
-ومن أهم المكتشفات بالحصن دفنة لبقرة رمزاً للقوة والوفرة والرخاء التي تميزت بها البقرة كمعبودة سماوية، وكتلتين من الحجر الجيري أحدهما عليها كتابة هيروغليفية لألقاب الملك رمسيس الثاني، والأخرى لأحد الموظفين ويدعى "باي"، وجعران من القيشاني مزين بنقش "آمون - سيد السماء" ويعلو اسمه زهرة اللوتس، وجعران آخر يحمل على قاعدته المعبود "بتاح" من الشست، ونصف خاتم من البرونز عليه نقش للمعبود "آمون حور آختي" وعقدين من القيشاني والعقيق لزهرة الرومان.
+<div class="detail-card">
+    <h2><i class="fas fa-sword"></i> المكتشفات الأثرية</h2>
+    <p>
+        - سيف برونزي للملك رمسيس الثاني.<br>
+        - جعرانات وتمائم، وعقد من القيشاني والعقيق.<br>
+        - صوامع فخارية لتخزين الطعام وأدوات الطهي.<br>
+        - أدوات شخصية للجنود مثل مراود التكحيل وخرز وزينة.
+    </p>
+</div>
 
+<div class="detail-card">
+    <h2><i class="fas fa-history"></i> الأهمية التاريخية</h2>
+    <p>
+        الحصن كان نقطة تمركز عسكري على الطريق الغربي لحماية الحدود الشمالية الغربية لمصر من هجمات القبائل الليبية وشعوب البحر، ويعكس براعة المهندس المصري القديم في تصميم الوحدات المعمارية واستغلال البيئة.
+    </p>
+</div>
 
+<div class="detail-card">
+    <h2><i class="fas fa-tools"></i> الأنشطة والاستخدامات</h2>
+    <p>
+        استخدمت الثكنات لتسكين الجنود، والمخازن لتخزين الطعام والمؤن اليومية، كما تدل اللقى الأثرية على النشاط العسكري والديني اليومي للجنود.
+    </p>
+</div>
 
-                    </p>
-
-                </div>
+<div class="detail-card">
+    <h2><i class="fas fa-gem"></i> رموز وقيم دينية</h2>
+    <p>
+        اكتشفت دفنة لبقرة رمزاً للقوة والرخاء، وجعرانات تحمل أسماء الآلهة مثل آمون وبتاح، ونقوش هيروغليفية لألقاب الملك رمسيس الثاني وأحد الموظفين.
+    </p>
+</div>
 
 <!-- 
                 <div class="quote-box">
