--- a/specific-tabs/abo-abdellah.html
+++ b/specific-tabs/abo-abdellah.html
@@ -28,6 +28,7 @@
 
             <!-- المعلومات التفصيلية -->
             <h1 class="h11">مسجد ابو عبدالله المغربي</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">Abu Abdullah Al-Maghribi Mosque</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -39,34 +40,33 @@
                     <p>يتميز المبنى بتصميم معماري فريد يجمع بين الأصالة والحداثة، حيث تظهر الواجهات الزجاجية الحديثة مع لمسات من الفن الإسلامي في الزخارف والنقوش. تبلغ سعة المسرح الرئيسي حوالي 1000 متفرج.</p>
                 </div> -->
 
-                <div class="detail-card">
-                    <h2> معلومات</h2>
-                    <p>
+<div class="detail-card">
+    <h2><i class="fas fa-mosque"></i> مسجد أبو عبدالله المغربي</h2>
+    <p>
+        يقع مسجد أبو عبدالله المغربي بمدينة دمنهور، في شارع أبو عبدالله بمنطقة تاموس، ويُعرف بأنه واحة للذكر والقرآن في محافظة البحيرة.
+    </p>
+</div>
 
-يقع مسجد أبو عبدالله المغربي في مدينة دمنهور، وتحديدًا في شارع أبو عبدالله بمنطقة تاموس. ويُعرف المسجد بأنه واحة للذكر والقرآن في محافظة البحيرة، حيث تُعقد فيه مقارئ القرآن الكريم وحلقات الذكر. 
-<br>
-فعاليات قرآنية
-<br>
-مقارئ القرآن: يُنظم المسجد فعاليات مميزة لمقارئ القرآن الكريم، حيث يتجمع المصلون لقراءة القرآن وتدبر آياته.
-<br>
+<div class="detail-card">
+    <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
+    <p>
+        يُعتبر المسجد مركزًا روحانيًا هامًا بالمحافظة، حيث يجتمع فيه المصلون لتلاوة القرآن الكريم وحضور حلقات الذكر النبوي الشريف.
+    </p>
+</div>
 
-حلقات الذكر النبوي: تقام حلقات للذكر النبوي الشريف، التي تجمع أعدادًا كبيرة من المصلين. 
-<br>
+<div class="detail-card">
+    <h2><i class="fas fa-map-marked-alt"></i> الموقع</h2>
+    <p>
+        يقع المسجد تحديدًا في شارع أبو عبدالله بمنطقة تاموس في مدينة دمنهور، ويتميز بسهولة الوصول له وكونه نقطة تجمع للأنشطة الدينية.
+    </p>
+</div>
 
-موقع المسجد
-<br>
-
-العنوان: يقع في شارع أبو عبدالله بمنطقة تاموس في مدينة دمنهور.
-<br>
-
-مشاهدات: رصدت عدسات الكاميرا فعاليات المقارئ التي تقام في المسجد. 
-
-
-
-
-                    </p>
-
-                </div>
+<div class="detail-card">
+    <h2><i class="fas fa-users"></i> الأنشطة الدينية</h2>
+    <p>
+        يُقام في المسجد مقارئ القرآن الكريم، وحلقات الذكر النبوي الشريف، والتي تجذب أعدادًا كبيرة من المصلين، مما يجعله مركزًا روحيًا وتربويًا مهمًا في المنطقة.
+    </p>
+</div>
 
 <!-- 
                 <div class="quote-box">
