--- a/specific-tabs/abo-magd.html
+++ b/specific-tabs/abo-magd.html
@@ -28,6 +28,7 @@
 
             <!-- المعلومات التفصيلية -->
             <h1 class="h11">مسجد وضريح ابو المجد</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">Abu al-Majd Mosque and Shrine</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -39,43 +40,37 @@
                     <p>يتميز المبنى بتصميم معماري فريد يجمع بين الأصالة والحداثة، حيث تظهر الواجهات الزجاجية الحديثة مع لمسات من الفن الإسلامي في الزخارف والنقوش. تبلغ سعة المسرح الرئيسي حوالي 1000 متفرج.</p>
                 </div> -->
 
-                <div class="detail-card">
-                    <h2> معلومات</h2>
-                    <p>
+<div class="detail-card">
+    <h2><i class="fas fa-mosque"></i> مسجد وضريح أبو المجد</h2>
+    <p>
+        مسجد وضريح سيدى عبد العزيز أبى المجد والد إبراهيم القرشى الدسوقى يقع في قرية المجد بمحافظة البحيرة.  
+        يُعد المقام مركزًا روحانيًا هامًا للبلدة، حيث يُكرم سيدى عبد العزيز رضى الله عنه، أحد أعظم أولياء الله في المحافظة.
+    </p>
+</div>
 
-كانت تسمى تلك البلدة حين نزلها سيدى عبد العزيز بمرقص وتغير إسمها إلى قرية المجد نسبة إلى سيدى عبد العزيز ابى المجد رضى الله تعالى عنه وهو أعظم أولياء الله تعالى فى محافظة البحيرة وقد شرفت به تشريفاً 
-ومما أوثر عن تعبده رضى الله تعالى عنه أنه حج سبعون حجة ماشياً على قدميه الشريفة وقد دونت الدولة العثمانية هذه المنقبة فى جمعها لسير الصالحين وحصرها لموالد مصر وأهل البيت فيها عن سيدى عبد العزيز رضى الله عنه عام 1628 ميلادياً 
-<br>
-وكان مقام سيدى عبد العزيز منفرداً فى بادئ الأمر مستقلاً عن المسجد الذى كان يسمى بالمسجد الكبير للبلدة وكان المقام يقع بين عشرات من النخيل محفوفاً بالزهور من حوله تعلق عليه القناديل طوال الليل فتظل البلدة مضيئة بنور ضريح سيدى عبد العزيز وكان المصريون يحتفلون بمولده يوماً واحداً وكان موعد تلك الليلة هو اليوم الذى يعقب الليلة الختامية لمولد سيدى إبراهيم القرشى الدسوقى رضى الله عنه وارضاه فيتوجه الناس والمشايخ والعلماء الى سيدى عبد العزيز الذى بينه وبين سيدى ابراهيم مسافة ثلاثة اميال عبر 
-النيل 
-<br>
+<div class="detail-card">
+    <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
+    <p>
+        سُجلت مناقب سيدى عبد العزيز في الدولة العثمانية عام 1628 ميلادياً، حيث كان معروفاً بتقواه وحجه ماشياً على قدميه.  
+        كان المقام منفرداً في البداية، ثم ضُم المسجد الكبير إلى الضريح خلال عهد الأسرة العلوية، مع الحفاظ على مأذنة الدولة العثمانية حتى اليوم.
+    </p>
+</div>
 
-وفى عهد الأسرة العلوية ضم المسجد الكبير الى ضريح سيدى عبد العزيز رضى الله عنه ولازالت مأذنة الدولة العثمانية موجودة الى اليوم وستلاحظون ضم المسجد الى المقام عبر الطرقة الفاصلة بين المسجد وغرفة الضريح وهو مسجد عليه من المهابة ماتخمد له الأنفاس وتخشع له القلوب 
-<br>
+<div class="detail-card">
+    <h2><i class="fas fa-archway"></i> التصميم والمميزات</h2>
+    <p>
+        المسجد والضريح متصلان عبر طرقة فاصلة، ويحيط بالمقام نخيل وحدائق مزينة بالزهور، مع تعليق القناديل طوال الليل.  
+        يمتاز المسجد بالهيبة التي تُشعر الزائر بالتقدير والخشوع عند دخوله، ويشكل مكانًا للعبادة والتأمل الروحي.
+    </p>
+</div>
 
-ملحوظة
-<br>
-
-جاء عن سيدى فخر الدين مولانا الشيخ محمد عثمان عبده البرهانى رضى الله عنه وارضاه أن السيدة فاطمة الشاذلية شقيقة سيدى ابو الحسن وزوجة سيدى عبد العزيز قد دفنت معه فى نفس الضريح أما التى فى الإسكندرية فهى ليست أمه 
-<br>
-
-هذا وقد جاء فى العدد الرابع عشر من مجلة نقابة الأشراف نسب سيدى ابراهيم الدسوقى من جهة والدته انها هى السيدة فاطمة شقيقة سيدى ابو الحسن الشاذلى
-<br>
-
-وقد ذكر ذلك أيضاً العلامة بن فارس فى كتابه المنح الإلهية بقوله أن سيدى ابو الحسن الشاذلى قد إجتمع بإبن إخته سيدى إبراهيم القرشى الدسوقى فى سنهور المدينة ثم غادر بعدها الى حميثرا حيث إنتقل هناك سيدى ابى الحسن الشاذلى 
-والذى يعرف أوراد السادة البرهانية سيجد أن سلسلة المشايخ فيها سيدى ابو الحسن الشاذلى بعد سيدى ابراهيم الدسوقى لأنه اخذ عنه فى الظاهر 
-<br>
-
-بينما لو صح أن سيدى ابراهيم أخذ عن سيدى احمد الرفاعى لكان سيدى إبراهيم قد وضعه فى سلسله السند والفواتح 
-<br>
-
-فالخلط الحاصل فيما يخص سيدى ابى الفتح الواسطى وأنه هو خال سيدى إبراهيم الدسوقى غير صحيح على الإطلاق 
-
-
-
-                    </p>
-
-                </div>
+<div class="detail-card">
+    <h2><i class="fas fa-users"></i> الطقوس والاحتفالات</h2>
+    <p>
+        كان المصريون يحتفلون بمولد سيدى عبد العزيز في اليوم الذي يلي الليلة الختامية لمولد سيدى إبراهيم القرشى الدسوقى.  
+        يتوجه الزوار والمشايخ والعلماء من مسافات تصل إلى ثلاثة أميال عبر النيل لزيارة المقام، ويشتهر الضريح بارتباطه بسلسلة المشايخ البرهانية والتصوف المحلي.
+    </p>
+</div>
 
 <!-- 
                 <div class="quote-box">
