--- a/specific-tabs/arab-kaly.html
+++ b/specific-tabs/arab-kaly.html
@@ -28,6 +28,7 @@
 
             <!-- المعلومات التفصيلية -->
             <h1 class="h11">منزل عرب كلى</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">Arab Kaly House</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -39,23 +40,37 @@
                     <p>يتميز المبنى بتصميم معماري فريد يجمع بين الأصالة والحداثة، حيث تظهر الواجهات الزجاجية الحديثة مع لمسات من الفن الإسلامي في الزخارف والنقوش. تبلغ سعة المسرح الرئيسي حوالي 1000 متفرج.</p>
                 </div> -->
 
-                <div class="detail-card">
-                    <h2> معلومات</h2>
-                    <p>
+<div class="detail-card">
+    <h2><i class="fas fa-landmark"></i> منزل عرب كلى / متحف رشيد الوطني</h2>
+    <p>
+        يُعد منزل عرب كلى من أكبر المنازل الباقية بمدينة رشيد، واختير ليكون متحفاً حربياً لتخليد ذكرى انتصار المدينة الباسلة على حملة فريزر عام 1807م.  
+        يرمز المتحف إلى مقاومة المدينة وتأخر دخول الإنجليز لمصر حتى عام 1882م.
+    </p>
+</div>
 
-تم اختيار منزل عرب كلى نظراً لكونه من أكبر المنازل الباقية بمدينة رشيد ولموقعه المتميز وقيمته الأثرية أن يكون متحفاً حربياً لمدينة رشيد تخليداً لذكرى انتصار المدينة الباسلة على حملة فريزر عام 1807م وتأخر دخول الإنجليز لمصر نظراً لمناعة هذه الجهة الغربية حتى عام 1882م. افتتح المتحف السيد الرئيس جمال عبد الناصر عام 1959م أثناء زيارته لمدينة رشيد خلال احتفالها بذكرى الانتصار. ويعتبر 19 سبتمبر من كل عام عيداً قرمياً لمحافظة البحيرة تخليداً لمناسبة الانتصار.
-<br>
-في عام 1985م تم تطوير المتحف وإثرائه بالمعروضات التي تعبر عن تاريخ مدينة رشيد، وأضيفت إليه الحديقة المقابلة للمنزل لتصبح حديقة متحفية للعرض المكشوف للقطع الأثرية المكتشفة بالمدينة. وقد قام الرئيس محمد حسني مبارك - بافتتاح المتحف وسُمًَى بمتحف رشيد الوطنى.
-<br>
+<div class="detail-card">
+    <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
+    <p>
+        افتتح المتحف الرئيس <strong>جمال عبد الناصر</strong> عام 1959م، ويُحتفل كل 19 سبتمبر بعيد انتصار رشيد.  
+        في عام 1985م، تم تطوير المتحف وإثرائه بالمعروضات التي تعكس تاريخ المدينة، وأضيفت الحديقة المحيطة لعرض القطع الأثرية المكشوفة.
+    </p>
+</div>
 
-ضمن خطة المجلس الأعلى للآثار في تطوير المتاحف المصرية، فقد تم ترميم منزل عرب كلى ترميماً شاملاً وإعداد سيناريو عرض متحفى وإثرائه بالمعروضات الأثرية على مر العصور واللوحات الجدارية التي تمثل الحياة اليومية بالمدينة، وتم عرض هذه المعروضات بطوابق المنزل، وكذلك تطوير الحديقة المتحفية المقابلة للمتحف وإنشاء وحدات خدمية بها حتى يخلى مبنى المتحف من أي مكاتب إدارية، وتشمل قاعة للندوات، قاعة لكبار الزوار، إدارة للمتحف، قسم لترميم الآثار، ويعرض بالفناء الخارجي الغربي للمتحف سبيل بشباك نحاسى كنموذج للأسبلة الملحقة بالمنازل في العصر العثماني (سبيل جبري).
+<div class="detail-card">
+    <h2><i class="fas fa-archway"></i> التطوير والترميم</h2>
+    <p>
+        خضع المنزل لترميم شامل ضمن خطة المجلس الأعلى للآثار، مع إعداد سيناريو عرض متحفي متكامل.  
+        تشمل التطويرات طوابق المنزل للمعروضات، والحديقة المتحفية، وقاعات للندوات وكبار الزوار، ومرافق لترميم الآثار.
+    </p>
+</div>
 
-
-
-
-                    </p>
-
-                </div>
+<div class="detail-card">
+    <h2><i class="fas fa-map-marked-alt"></i> المعروضات والمميزات</h2>
+    <p>
+        يعرض المتحف تاريخ مدينة رشيد عبر العصور، مع لوحات جدارية تُظهر الحياة اليومية،  
+        ويحتوي الفناء الخارجي على سبيل بشباك نحاسي يمثل نموذج الأسبلة في العصر العثماني، مما يجمع بين التاريخ العسكري والمعماري والثقافي للمدينة.
+    </p>
+</div>
 
 <!-- 
                 <div class="quote-box">
