--- a/specific-tabs/baramos.html
+++ b/specific-tabs/baramos.html
@@ -28,6 +28,7 @@
 
             <!-- المعلومات التفصيلية -->
             <h1 class="h11">دير البراموس</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">Monastery of Paramos</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -40,38 +41,48 @@
                 </div> -->
 
                 <div class="detail-card">
-                    <h2> معلومات</h2>
+                    <h2><i class="fas fa-church"></i> دير البراموس</h2>
                     <p>
+                        يُعد دير العذراء البراموس أحد أقدم وأهم أديرة الكنيسة القبطية الأرثوذكسية، 
+                        ويقع في وادي النطرون على بُعد 12 كم من طريق القاهرة – الإسكندرية الصحراوي.  
+                        يُعرف الدير بأصالته التاريخية وعمقه الروحي، ويُعد واحدًا من أبرز مراكز الحياة الرهبانية في مصر منذ القرون الأولى.
+                    </p>
+                </div>
 
-يقع بمدينة وادى النطرون, وينسب هذا الدير إلى السيدة العذراء ويعرف بدير الروم لوجود مغارة أولاد الملوك التي عاش بها الأميران مكسموس ودماديوس ابنا الإمبراطور فالنتينان الأول الذي حكم في الفترة من (364-375م) وقد أطلق عليه بعض المؤرخين دير أبي موسى الأسود وذلك لأن الأنبا موسى كان رئيسا لذلك الدير ودفن به. ويرجع تاريخ تأسيس الدير إلى القرن السادس عشر الميلادي، وكان آنذاك عبارة عن كنيسة، ويقع الدير على مساحة نحو فدانين وثلاثة عشر قيراطا في أقصى شمال وادى النطرون، ويضم الدير خمسة كنائس أثرية ومكتبة تحتوي على مئات المخطوطات بلغات شتى، بجانب الحصن وقصر الضيافة ومخبز وبعض المخازن .
-<br>
-يعتبر دير العذراء البرامواس واحداً من أقدم أديرة الكنيسة القبطية الأرثوذكسية، حيث يقع بوادى النطرون ويبعد عن طريق القاهرة الاسكندرية حوالى 12 كيلومتر.
+                <div class="detail-card">
+                    <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
+                    <p>
+                        يُنسب الدير إلى السيدة العذراء، ويُعرف أيضًا بـ<strong>دير الروم</strong> لوجود 
+                        مغارة أولاد الملوك التي عاش فيها الأميران <strong>مكسيموس ودوماديوس</strong>، ابنا الإمبراطور فالنتينيان الأول (364–375م).  
+                        تشير بعض المصادر إلى أن تأسيسه يعود إلى القرن الرابع الميلادي في زمن القديس <strong>مكاريوس الكبير</strong> 
+                        الذي أسس الحياة الرهبانية في برية شيهيت سنة 330م.  
+                        أما الدير الحالي فقد بدأ ككنيسة في القرن السادس عشر ثم تطور ليصبح ديرًا كاملًا.
+                    </p>
+                </div>
 
-وكان القديس مكاريوس أول ناسك يسكن برية شيهيت حوالى سنة 330م طلباً للهدرء والسكينة وهو الذى أسس أول جماعة رهبانيــة
+                <div class="detail-card">
+                    <h2><i class="fas fa-archway"></i> العمارة ومكونات الدير</h2>
+                    <p>
+                        يمتد الدير على مساحة تُقارب فدانين وثلاثة عشر قيراطًا في أقصى شمال وادي النطرون، 
+                        ويضم <strong>خمس كنائس أثرية</strong> ومكتبة تحتوي على مئات المخطوطات النادرة بلغات متعددة.  
+                        يحتوي الدير أيضًا على حصن أثري، ومبيت للضيافة، ومخبز، وعدة مخازن.  
+                        أما الأسوار الشاهقة المحيطة به فقد بُنيت بعد الغارة البربرية السادسة سنة 817م، 
+                        ويصل ارتفاعها إلى 11 مترًا وبعرض 2.5 متر، مما يعكس دور الدير الدفاعي خلال العصور القديمة.
+                    </p>
+                </div>
 
-وأكتمــل نمـو البرامــوس كجماعة رهبانية مكتملة حول كنيسة يصلون فيها ومغارات الرهبان تنتشر حولها دون أن يكــون لها سور حوالى ســنة 356 م
-
-قديسو الدير:
-
- 
-
-القديسة العذراء مريم
-
- 
-
-يرتبط دير البراموس بالقديسين الروميين مكسيموس و دوماديوس
-
- 
-
-ويعتبر الدير الحالى من أديرة الثيؤطوكوس أى الأديرة التوأم أذ أن الرهبان الأرثوذكس أرادوا مقاومة البدعة اليوليانية فى القرن السادس الميلادى فأنشأوا كنائس تحمل لقب ثيؤطوكوس إلى جوار الكنائس الأصلية التى تحمل اسم الجماعة الرهبانية
-
- 
-
-وكذلك من قديسي الدير: الأنبا موسى مــن أروع الأمثلــة لحياة التوبة والقديس الأنبا إيسوذورس قس الإسقيط والقديس الأنبا أرسانيوس معلم أولاد الملوك.
-
- 
-
-ويحتوى الدير على أسوار شاهقة بنيت بعد الغارة البربرية السادسة التى وقعت سنة 817 يصل ارتفاعها إلى 11 متر و عرضها إلى مترين و نصف وايضا القصر ويستخدم للضيافة ومنارتان</p>
+                <div class="detail-card">
+                    <h2><i class="fas fa-cross"></i> القديسون والهوية الروحية</h2>
+                    <p>
+                        ارتبط الدير بعدد من أبرز قديسي الكنيسة، منهم:  
+                        <strong>القديسة العذراء مريم</strong>،  
+                        <strong>مكسيموس ودوماديوس</strong>،  
+                        <strong>الأنبا موسى الأسود</strong> — رمز التوبة الحقيقية،  
+                        <strong>القديس إيسوذورس</strong> قس الإسقيط،  
+                        <strong>والقديس أرسانيوس</strong> معلم أولاد الملوك.  
+                        كما يُعتبر الدير من أديرة <strong>الثيؤطوكوس</strong> (أديرة والدة الإله) التي أنشئت في القرن السادس لمقاومة البدعة اليوليانية.  
+                        ويضم الدير منارتين أثريتين تضيفان لطابعه الروحي والهدوء الذي يميز وادي النطرون.
+                    </p>
                 </div>
 
 <!-- 
