--- a/specific-tabs/bawaba-reesh.html
+++ b/specific-tabs/bawaba-reesh.html
@@ -28,6 +28,7 @@
 
             <!-- المعلومات التفصيلية -->
             <h1 class="h11">بوابة أبو الريش</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">Abu Rish Gate</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -40,21 +41,33 @@
                 </div> -->
 
                 <div class="detail-card">
-                    <h2> معلومات</h2>
+                    <h2><i class="fas fa-landmark"></i> بوابة أبو الريش</h2>
                     <p>
-
-بوابة أبو الريش هي بوابة تاريخية في مدينة رشيد بمحافظة البحيرة في مصر، وهي من البوابات الأثرية التي تحتاج إلى ترميم عاجل. تُعد هذه البوابة جزءًا من سور رشيد القديم الذي بناه السلطان المملوكي قنصوة الغوري، ويوجد بالقرب منها ضريح الشيخ أبو الريش وآخرين. تعرضت البوابة للإهمال مما أدى إلى تدهور حالتها وقلق حول مصيرها الأثري. 
-<br>
-بنيت كجزء من سور رشيد الذي أمر السلطان المملوكي قنصوة الغوري ببنائه.
-<br>
-تعد البوابة الشمالية لمدينة رشيد.
-<br>
-توجد بالقرب منها ضريح للشيخ أبو الريش، ويعود تاريخ الضريح إلى ما قبل بناء السور.
-
-
-
+                        تُعد بوابة أبو الريش واحدة من أبرز المعالم الأثرية في مدينة رشيد، 
+                        وكانت تمثل المدخل الغربي وحصن المدينة المنيع خلال العصور المملوكية.  
+                        اكتسبت البوابة شهرتها الكبيرة لدورها المحوري في صد القوات الإنجليزية أثناء <strong>حملة فريزر</strong>، 
+                        ما جعلها رمزًا من رموز المقاومة الوطنية في رشيد.
                     </p>
+                </div>
 
+                <div class="detail-card">
+                    <h2><i class="fas fa-archway"></i> التاريخ والأهمية الدفاعية</h2>
+                    <p>
+                        بُنيت البوابة كجزء من سور رشيد الذي أمر بتشييده السلطان المملوكي <strong>قنصوة الغوري</strong> 
+                        في أواخر القرن الخامس عشر لحماية المدينة من الغزوات البحرية.  
+                        كانت تُعد <strong>البوابة الشمالية</strong> للمدينة، وتطل على طريق استراتيجي كان يعبر منه القادمين إلى رشيد.  
+                        ورغم صمودها التاريخي إلا أنها تعاني حاليًا من الإهمال وتحتاج إلى ترميم عاجل للحفاظ عليها.
+                    </p>
+                </div>
+
+                <div class="detail-card">
+                    <h2><i class="fas fa-monument"></i> المعالم المحيطة بالبوابة</h2>
+                    <p>
+                        تقع بالقرب من البوابة مجموعة من الأضرحة أبرزها <strong>ضريح الشيخ أبو الريش</strong> 
+                        الذي يعود تاريخه إلى الفترة السابقة لبناء السور نفسه، مما يعكس عمق البعد الروحي للمنطقة.  
+                        كما تحيط بها بقايا من سور رشيد القديم، الذي كان يشكل خط الدفاع الأول عن المدينة 
+                        خلال فترات الاضطراب والصراعات العسكرية.
+                    </p>
                 </div>
 
 <!-- 
