--- a/specific-tabs/beshara-church.html
+++ b/specific-tabs/beshara-church.html
@@ -28,6 +28,7 @@
 
             <!-- المعلومات التفصيلية -->
             <h1 class="h11">كنيسة البشارة</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">Beshara's Church</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -40,35 +41,37 @@
                 </div> -->
 
                 <div class="detail-card">
-                    <h2> معلومات</h2>
+                    <h2><i class="fas fa-church"></i> كنيسة البشارة</h2>
                     <p>
-
-                        التأسيس: بُنيت الكنيسة في أواخر القرن التاسع عشر، حوالي عام 1875، لتخدم الجالية الكاثوليكية من الأجانب الذين قدموا إلى دمنهور بسبب ازدهار تجارة محالج القطن آنذاك.
-<br>
-احتفال اليوبيل: في مارس 2025، احتفلت الكنيسة بمرور 150 عامًا على تأسيسها بحضور مطران الكنيسة اللاتينية بمصر، كلاوديو لوراتي، وعدد من الشخصيات الكنسية الأخرى.
-<br>
-التجديدات: شهدت الكنيسة تجديدات وتطويرات على مر السنين للحفاظ على طرازها المعماري الفريد. 
-<br>
-
-الطراز المعماري: تتميز الكنيسة بتصميمها المعماري الفريد والمختلف عن كنائس أخرى في مصر.
-<br>
-
-الجرس الأثري: تضم الكنيسة جرسًا أثريًا تم تركيبه على منارتها عام 1881.
-<br>
-
-<br>
-الطقوس: تتبع الكنيسة الطائفة الكاثوليكية اللاتينية، وتقام فيها الصلوات والقداسات وفقًا لهذه الطقوس. 
-
-<br>
-العنوان: تقع الكنيسة في شارع تماموس، بالقرب من محطة السكة الحديد بمدينة دمنهور.
-<br>
-التطوير العمراني: تقع الكنيسة في منطقة شهدت تطورًا، خاصةً ميدان المحطة بدمنهور، مما يجعلها جزءًا من النسيج الحضاري للمدينة. 
-
-
-
-
+                        كنيسة السيدة العذراء سيدة البشارة للرهبان الفرنسيسكان بدمنهور هي إحدى أقدم دور العبادة الكاثوليكية في مصر.  
+                        تم تأسيسها لخدمة الجالية الكاثوليكية من الأجانب الذين قدموا إلى المدينة بسبب ازدهار تجارة محالج القطن في القرن التاسع عشر.
                     </p>
+                </div>
 
+                <div class="detail-card">
+                    <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
+                    <p>
+                        بُنيت الكنيسة في أواخر القرن التاسع عشر، حوالي عام 1875.  
+                        شهدت الكنيسة عدة تجديدات للحفاظ على طرازها المعماري الفريد، واحتفلت بمرور 150 عامًا على تأسيسها في مارس 2025، بحضور مطران الكنيسة اللاتينية بمصر <strong>كلاوديو لوراتي</strong>.
+                    </p>
+                </div>
+
+                <div class="detail-card">
+                    <h2><i class="fas fa-archway"></i> الطراز المعماري والمميزات</h2>
+                    <p>
+                        تتميز الكنيسة بتصميم معماري فريد ومختلف عن الكنائس الأخرى في مصر،  
+                        وتشمل منارتها جرسًا أثريًا تم تركيبه عام 1881.  
+                        تعتبر الكنيسة تحفة معمارية ضمن النسيج الحضاري لمدينة دمنهور.
+                    </p>
+                </div>
+
+                <div class="detail-card">
+                    <h2><i class="fas fa-map-marked-alt"></i> الموقع والطقوس</h2>
+                    <p>
+                        تقع الكنيسة في شارع تماموس بالقرب من محطة السكة الحديد بدمنهور.  
+                        تتبع الكنيسة الطائفة الكاثوليكية اللاتينية، وتقام فيها الصلوات والقداسات وفقًا للطقوس الخاصة بهذه الطائفة،  
+                        وتشكل جزءًا من التطوير العمراني والتاريخي للمدينة، خاصةً بمنطقة ميدان المحطة.
+                    </p>
                 </div>
 
 <!-- 
