--- a/specific-tabs/canob.html
+++ b/specific-tabs/canob.html
@@ -28,6 +28,7 @@
 
             <!-- المعلومات التفصيلية -->
             <h1 class="h11">لوحة كوم الحصن "مرسوم كانوب"</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">Decree of Canopus</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -39,18 +40,33 @@
                     <p>يتميز المبنى بتصميم معماري فريد يجمع بين الأصالة والحداثة، حيث تظهر الواجهات الزجاجية الحديثة مع لمسات من الفن الإسلامي في الزخارف والنقوش. تبلغ سعة المسرح الرئيسي حوالي 1000 متفرج.</p>
                 </div> -->
 
-                <div class="detail-card">
-                    <h2> معلومات</h2>
-                    <p>
+<div class="detail-card">
+    <h2><i class="fas fa-scroll"></i> مرسوم كانوب (Decree of Canopus)</h2>
+    <p>
+        نقش ثلاثي اللغة يعود إلى الفترة البطلمية في مصر القديمة، كُتب بثلاثة أنظمة كتابة: الهيروغليفية المصرية، الديموطية، واليونانية الكوينية.
+    </p>
+</div>
 
-مرسوم كانوپ (Decree of Canopus)، هو نقش ثلاثي اللغة بثلاثة خطوط، يعود تاريخه إلى الفترة الپطلمية في مصر القديمة. وقد كُتب بثلاثة أنظمة كتابة: الهيروغليفية المصرية، والديموطية، واليونانية الكوينية، على العديد من الأحجار التذكارية أو النصب التذكارية المصرية القديمة. النقش هو سجل لمجمعاً كبيراً للكهنة عقد في كانوپ، في 7 أپلايوس (مقدوني) = 17 تيبى (مصري) السنة التاسعة من حكم پطليموس الثالث = الخميس 7 مارس 238 قبل الميلاد (التقويم اليوليوسي المبكر). وقد كرّم مرسومهم الفرعون پطليموس الثالث إورگيتس؛ وزوجته الملكة برنيكه وابنته الأميرة برنيكه.
+<div class="detail-card">
+    <h2><i class="fas fa-history"></i> التاريخ</h2>
+    <p>
+        يُسجل المرسوم أحداث مجمع كبير للكهنة عقد في كانوب بتاريخ 7 مارس 238 قبل الميلاد، في السنة التاسعة من حكم بطليموس الثالث أورجيتس.
+    </p>
+</div>
 
-<br>
+<div class="detail-card">
+    <h2><i class="fas fa-archway"></i> الهدف</h2>
+    <p>
+        كَرّم المرسوم الفرعون بطليموس الثالث، وزوجته الملكة برنيكه، وابنته الأميرة برنيكه، وسجّل القرارات والاحتفالات الرسمية للكهنة.
+    </p>
+</div>
 
-
-                    </p>
-
-                </div>
+<div class="detail-card">
+    <h2><i class="fas fa-landmark"></i> الأهمية التاريخية</h2>
+    <p>
+        يُعد المرسوم وثيقة تاريخية هامة لفهم الإدارة الدينية والسياسية في مصر البطلمية، ويُظهر العلاقة بين الفراعنة والكهنة ومكانة الأسرة الملكية.
+    </p>
+</div>
 
 <!-- 
                 <div class="quote-box">
