--- a/specific-tabs/dareh-ebn-el-nafis.html
+++ b/specific-tabs/dareh-ebn-el-nafis.html
@@ -28,6 +28,7 @@
 
             <!-- المعلومات التفصيلية -->
             <h1 class="h11">ضريح ابن النفيس</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">Ibn al-Nafis's Mausoleum</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -40,32 +41,43 @@
                 </div> -->
 
                 <div class="detail-card">
-                    <h2> معلومات</h2>
+                    <h2><i class="fas fa-landmark"></i> ضريح ابن النفيس</h2>
                     <p>
-من أهم المعالم السياحية في الرحمانية قبة وضريح العالم
- العربي على بن النفيس مكتشف الدورة الدموية الصغرى توجد القبة بمدينة الرحمانية بشارع ابن النفيس جنوبي المدينة
- وقد أنشئت هذه القبة وضريحها عام 1297هـ 1879م وهي موجودة بالمدخل الشمالي الغربي بالضريح الذي بناه محمد أغا 
-محمود. تقوم القبة علي مساحة 3.75 م ويبلغ سمك الجدران 80 سم, ويتوسط القبة مقصورة من الخشب يبلغ طولها 2.94م
- وبداخلها المقبرة التي يرجع تاريخها إلي نهاية القرن الثالث عشر (13) هجري (19) ميلادي                    
-<br>
-على بعد 22 كيلو مترًا من مدينة دمنهور عاصمة محافظة البحيرة، وبالتحديد في مدينة الرحمانية توجد إحدي أهم مقابر العلماء التي تدرس علومهم في كامبردج وأكسفورد ويذكر اسمه كرائد في كافة المحافل العلمية الدولية.
-<br>
+                        يقع ضريح ابن النفيس في مدينة الرحمانية بمحافظة البحيرة، ملاصقًا لمسجد يحمل نفس الاسم. 
+                        تم اكتشاف الضريح رسميًا عام 1988 من خلال لوحة رخامية تحدد تاريخ إنشائه، 
+                        ويُنسب الضريح إلى الطبيب والعالِم الإسلامي الكبير "ابن النفيس" مكتشف الدورة الدموية الصغرى.
+                    </p>
+                </div>
 
-وبين هذه المقابر توجد مقبرة عميد أطباء العالم وأحد معالم الحضارة الإسلامية أبو الحسن علاء الدين ابن أبي الحزم، والذي يعرف باسم "ابن النفيس" مكتشف الدورة الدموية الصغرى، ومسجده الذي دفن فيه في مدينة الرحمانية سنة 687هـ، وتم اعتماده أثرًا إسلاميًا، ورغم ذلك لم يحظ يومًا بأي اهتمامٍ رسمي أو إعلامي أو سياحي.
-<br>
-ويقول أحد المواطنين، إن مدينة الرحمانية التي يوجد بها مسجد وضريح ابن النفيس يوجد بها عدد من الأضرحة الأخري لمشاهير التابعين والفلاسفة، وبرغم تاريخها نضالًا يستحق الذكر، ومعارك أهلها ضد الاحتلال الفرنسي والذي أثمر عن معركة الرحمانية الشهيرة، ومن بعدهم الإنجليز، إلا أنها لا تزال بعيدة عن أعين الشركات السياحية، لعدم وجود فنادق ولا أماكن إعاشة أو خطوط مواصلات تليق بالسائحين، متسائلًا متي توضع الرحمانية على خريطة السياحة مثل غيرها؟.
-<br>
-ويضيف آخر لو أن علماء أوروبا وأمريكا عرفوا مكان ضريحه لتحولت المنطقة إلى مزار سياحي ولقدم إليهم الباحثين والعلماء من كل مكان، كما يحدث مع مشاهير الصين وأوروبا وآسيا.
-<br>
-ويقول محمد مأمون، أحد أبناء الرحمانية إن ابن النفيس ولد في دمشق وتوفّي في الرحمانية عام 687 هجرية عن عمرٍ يناهز 80 عامًا، وذاع صيته وانتشرت شهرته بين الأمصار عندما تم تعيينه عميدًا للأطباء.
-<br>
-ويضيف آخر آخر أن نبوغ ابن النفيس لم يقتصر على اكتشاف الدورة الدموية بل يرجع له الفضل في كثير من تطوير علم التشريح وهي فرصة لنعيد مجد بلادنا مستغربًا لم لا تسير كليات العلوم والطب والطب البيطري والصيدلة رحلات للمنطقة ربما تكون حافزًا لدى الطلاب ليغيرو من خريطة العلم مرة أخرى لصالحنا.
-<br>
-ويقول كامل رحومة، باحث في التراث، إن مدينتي الرحمانية ورشيد بهما العديد من أضرحة الصحابة إلى جانب ضريح ابن النفيس، وبهما اللوحة التذكارية والتي بها قصيدة الشعر التي تثبت كونه ابن النفيس إلى جانب توثيق الآثار للمسجد كونه مسجد ابن النفيس وهناك مكتب للآثار أيضا.
-<br>
-ويضيف رحومه "كان هناك اختلاف حول ابن النفيس هل هو مكتشف الدورة الدموية الصغرى أو ابن النفيس العالم الصوفي الكبير، وعمومًا كلاهما له أكبر الأثر في العلم، لكن هو ابن النفيس لأن مدينة المحمودية كانت على الفرع البوبلتينية الذي اندثر في الماضي، وكان هذا الفرع فيما مضي بين عاصمة نقراطيس في إيتاي البارود وصا الحجر واللذان لهما في التاريخ الروماني والإغريقي حضورًا كبيرًا، إلى جانبه قربها من رشيد ذات التاريخ المديد، وإلى جانب ابن النفيس هناك ضريح عدي ابن حاتم الطائي، وهناك آخرين والأهالي يعرفون أماكنهم"
+                <div class="detail-card">
+                    <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
+                    <p>
+                        يعود إنشاء القبة والضريح إلى عام 1297هـ / 1879م على يد <strong>محمد أغا محمود</strong>.  
+                        بُنِي الضريح على مساحة 3.75 متر، بسُمك جدران يصل إلى 80 سم، 
+                        ويتوسطه مقصورة خشبية بطول 2.94 متر تحتوي على المقبرة التي يعود تاريخها إلى نهاية القرن الثالث عشر الهجري.
+                        يُعد هذا الضريح واحدًا من أهم المزارات التاريخية لكونه مدفنًا لعميد أطباء العالم.
+                    </p>
+                </div>
 
-</p>
+                <div class="detail-card">
+                    <h2><i class="fas fa-map-marked-alt"></i> الأهمية العلمية</h2>
+                    <p>
+                        يوجد الضريح على بُعد 22 كم من مدينة دمنهور، ويُعد مزارًا لواحد من أبرز علماء الطب الذين تُدرَّس مؤلفاتهم 
+                        في جامعات عالمية مثل أكسفورد وكامبردج.  
+                        اشتهر ابن النفيس باكتشاف الدورة الدموية الصغرى وتطوير علم التشريح، 
+                        كما كان عميدًا للأطباء في زمانه وترك إرثًا علميًا أثر في النهضة الطبية في العالم.
+                    </p>
+                </div>
+
+                <div class="detail-card">
+                    <h2><i class="fas fa-mosque"></i> المكان والسياحة</h2>
+                    <p>
+                        رغم تسجيل الضريح والمسجد كآثار إسلامية رسمية، إلا أن المنطقة تعاني من ضعف الاهتمام السياحي 
+                        بسبب نقص الخدمات والفنادق وممرات الوصول المناسبة للوفود.  
+                        ويضم محيط الرحمانية عددًا من أضرحة التابعين والفلاسفة، 
+                        كما شهدت المدينة أحداثًا تاريخية بارزة مثل <strong>معركة الرحمانية ضد الحملة الفرنسية</strong>.
+                        يرى الأهالي أن المكان مؤهل ليكون مقصدًا ثقافيًا وسياحيًا مهمًا إذا تم تسليط الضوء عليه بشكل أكبر.
+                    </p>
                 </div>
 
 <!-- 
