--- a/specific-tabs/defsho.html
+++ b/specific-tabs/defsho.html
@@ -28,6 +28,7 @@
 
             <!-- المعلومات التفصيلية -->
             <h1 class="h11">كوم دفشو</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">Kom Dafsho</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -39,26 +40,43 @@
                     <p>يتميز المبنى بتصميم معماري فريد يجمع بين الأصالة والحداثة، حيث تظهر الواجهات الزجاجية الحديثة مع لمسات من الفن الإسلامي في الزخارف والنقوش. تبلغ سعة المسرح الرئيسي حوالي 1000 متفرج.</p>
                 </div> -->
 
-                <div class="detail-card">
-                    <h2> معلومات</h2>
-                    <p>
+<div class="detail-card">
+    <h2><i class="fas fa-landmark"></i> كوم دفشو</h2>
+    <p>
+        تل أثري بارز بمركز كفر الدوار، تعود أغلب مخلفاته للعصرين اليوناني والروماني، ويعتبر من أبرز المواقع الأثرية بالمنطقة.
+    </p>
+</div>
 
-توجد في كفر الدوار والمنطقة المحيطة بها العديد من المواقع الأثرية والتاريخية، والتي يعود أغلبها إلى العصرين اليوناني والروماني، بالإضافة إلى أهميتها التاريخية الحديثة كمسرح لواحدة من أهم المعارك في التاريخ المصري الحديث. 
-أهم الآثار والمواقع في كفر الدوار:
-تل آثار كوم دفشو: يعد هذا التل من أبرز المواقع الأثرية في مركز كفر الدوار. كشفت الحفائر فيه عن مجموعة من التوابيت الحجرية والفخارية، وبعض الأواني الفخارية التي تعود للعصرين اليوناني والروماني.
-كوم الحمام: منطقة أثرية أخرى تقع في مركز كفر الدوار.
-المقابر القديمة المحيطة: تنتشر في محيط كفر الدوار عدة تلال ومناطق أثرية تحتوي على بقايا فخارية ومقتنيات من العصر البطلمي، ومنها: كوم إيشو، كوم الفرج، سيدي غازي، كوم الطرغاية، وتل القنايس.
-مواقع مسح كفر الدوار الأثري: قامت جمعية استكشاف مصر (EES) بمسح لمواقع أثرية مختارة بالقرب من المدينة، مثل كوم الغسولي، عبده باشا، وكوم المجير، والتي تفتقر المعلومات عنها للتوفر على نطاق واسع.
-نصب تذكاري لمعركة كفر الدوار: يحمل هذا النصب أهمية تاريخية حديثة، إذ يخلد ذكرى معركة كفر الدوار الشهيرة التي وقعت عام 1882 بين الجيش المصري بقيادة أحمد عرابي والقوات البريطانية، وانتهت بانتصار القوات المصرية في هذه المعركة.
-متحف كفر الدوار: يعرض هذا المتحف مقتنيات أثرية وحرف تقليدية وصوراً توثق تاريخ المدينة وتراثها الثقافي. 
-تجدر الإشارة إلى أن بعض هذه المواقع قد تعرضت لتعديات عبر الزمن، مما يؤكد على أهمية الحفاظ على هذا التراث. 
+<div class="detail-card">
+    <h2><i class="fas fa-boxes"></i> المكتشفات الأثرية</h2>
+    <p>
+        - توابيت حجرية وفخارية.<br>
+        - أواني فخارية تعود للعصرين اليوناني والروماني.<br>
+        - مقابر وتلال أثرية أخرى مثل كوم إيشو، كوم الفرج، سيدي غازي، كوم الطرغاية، وتل القنايس.
+    </p>
+</div>
 
+<div class="detail-card">
+    <h2><i class="fas fa-history"></i> الأهمية التاريخية</h2>
+    <p>
+        لم يقتصر الموقع على العصرين اليوناني والروماني فقط، بل كان مسرحًا لإحدى أهم المعارك في التاريخ المصري الحديث، وهي معركة كفر الدوار 1882 بين الجيش المصري بقيادة أحمد عرابي والقوات البريطانية، وانتهت بانتصار القوات المصرية.
+    </p>
+</div>
 
+<div class="detail-card">
+    <h2><i class="fas fa-museum"></i> المتاحف والمعروضات</h2>
+    <p>
+        - متحف كفر الدوار يعرض مقتنيات أثرية وحرف تقليدية وصور توثق تاريخ المدينة وتراثها الثقافي.<br>
+        - بعض المواقع تم مسحها حديثًا من قبل جمعية استكشاف مصر (EES) مثل كوم الغسولي، عبده باشا، وكوم المجير.
+    </p>
+</div>
 
-
-                    </p>
-
-                </div>
+<div class="detail-card">
+    <h2><i class="fas fa-shield-alt"></i> المحافظة على التراث</h2>
+    <p>
+        بعض المواقع تعرضت لتعديات عبر الزمن، مما يؤكد على أهمية الحفاظ على التراث الأثري والتاريخي للمدينة والمناطق المحيطة بها.
+    </p>
+</div>
 
 <!-- 
                 <div class="quote-box">
