--- a/specific-tabs/der-serian.html
+++ b/specific-tabs/der-serian.html
@@ -28,6 +28,7 @@
 
             <!-- المعلومات التفصيلية -->
             <h1 class="h11">دير العذراء - السريان</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">Monastery of Syriacs</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -40,27 +41,35 @@
                 </div> -->
 
                 <div class="detail-card">
-                    <h2> معلومات</h2>
+                    <h2><i class="fas fa-church"></i> دير السيدة العذراء - السريان</h2>
                     <p>
-
-بني هذا الدير في القرن السادس الميلادي، وقد سمي بهذا الاسم لأن العديد من الرهبان السوريين أقاموا فيه على مر القرون.
-<br>
-نسبت الكنيسة الرئيسية في الدير إلى السيدة العذراء، وتحتوي على جداريات رائعة، ويعلوالهيكل قبة مزينة بمشاهد من الكتاب المقدس مثل منظر يصور ميلاد السيد المسيح.
-<br>
-
-وفي 1988م أدى حريق صغير بالديرإلى تدمير جدارية من القرن الثاني عشر الميلادي، فظهرت تحتها جدارية نادرة تعود إلى عام 950م، وممثل بها مشهد الاحتفال بالسيدة العذراء مريم.
-<br>
-
-ومن أهم سمات الكنيسة أبواب الحرم المقدس وهي مزينة بصور للسيد المسيح، والسيدة العذراء، وقديسين آخرين.
-<br>
-
-اكتشف الأوروبيون مجموعة نادرة من المخطوطات السريانية في مكتبة الدير خلال القرن التاسع عشر الميلادي، وهى موجودة حاليًا بمكتبة الفاتيكان ومؤسسات أخرى، وتشمل تلك المجموعة مخطوطات فريدة من أقدم النصوص اليونانية لأرسطو، وإقليدس، وأبقراط.
-
-
-
-
+                        يقع الدير في وادي النطرون غرب دلتا النيل شمال مصر، ويُعد أصغر الأديرة العامرة الأربعة في المنطقة.  
+                        سُمّي بهذا الاسم نسبة للرهبان السوريين الذين أقاموا فيه على مر القرون، وهو مخصص لعبادة السيدة العذراء مريم.
                     </p>
+                </div>
 
+                <div class="detail-card">
+                    <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
+                    <p>
+                        بُني الدير في القرن السادس الميلادي، ويحتوي على الكنيسة الرئيسية المزينة بجداريات رائعة وقبة تصور مشاهد من الكتاب المقدس، بما في ذلك ميلاد السيد المسيح.  
+                        في عام 1988م، أدى حريق صغير إلى كشف جدارية نادرة تعود إلى عام 950م تصور الاحتفال بالسيدة العذراء.
+                    </p>
+                </div>
+
+                <div class="detail-card">
+                    <h2><i class="fas fa-archway"></i> الطراز المعماري والزخارف</h2>
+                    <p>
+                        يتميز الدير بأبواب الحرم المقدس المزينة بصور السيد المسيح والسيدة العذراء وقديسين آخرين،  
+                        بالإضافة إلى الجداريات الداخلية التي تعكس الفن القبطي القديم والتأثيرات السورية في العمارة الديرية.
+                    </p>
+                </div>
+
+                <div class="detail-card">
+                    <h2><i class="fas fa-book"></i> المخطوطات والكنوز الثقافية</h2>
+                    <p>
+                        اكتشف الأوروبيون في القرن التاسع عشر مجموعة نادرة من المخطوطات السريانية في مكتبة الدير،  
+                        تشمل أقدم النصوص اليونانية لأرسطو وإقليدس وأبقراط، وهي محفوظة حاليًا في مكتبة الفاتيكان ومؤسسات عالمية أخرى.
+                    </p>
                 </div>
 
 <!-- 
