--- a/specific-tabs/edfena.html
+++ b/specific-tabs/edfena.html
@@ -28,6 +28,7 @@
 
             <!-- المعلومات التفصيلية -->
             <h1 class="h11">كوبري السكة الحديد بادفينا</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">Edvina Railway Bridge</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -40,22 +41,38 @@
                 </div> -->
 
                 <div class="detail-card">
-                    <h2> معلومات</h2>
+                    <h2><i class="fas fa-train"></i> كوبري السكة الحديد بإدفينا</h2>
                     <p>
-
-كوبري السكة الحديد بإدفينا هو جزء حيوي من البنية التحتية المصرية، يقع عند منطقة قناطر إدفينا الشهيرة على فرع رشيد لنهر النيل، بالقرب من مدينة رشيد في محافظة البحيرة. 
-<br>
-يخدم الكوبري كوصلة نقل مهمة، حيث يحمل خط السكة الحديد الذي يربط بين منطقة البوصيلي ومدينة دسوق. وما يميزه هندسيًا هو احتوائه على جزء متحرك (كوبري متحرك)، يتم فتحه للسماح بمرور السفن والمراكب في المجرى الملاحي لنهر النيل، ويغلق لعبور القطارات. 
-<br>
-يعتبر الكوبري تحفة هندسية على سطح النيل. وقد تم بناء القناطر والكوبري المرافق لها في فترة الأربعينيات والخمسينيات من القرن الماضي، وتحديدًا في عهد الملك فاروق حوالي عام 1950. 
-<br>
-وفي إطار جهود تطوير المنطقة، تم في عام 2016 تفقد أعمال تطوير مزلقان محطة قطار إدفينا وإنشاء كوبري جديد للسيارات يهدف إلى تحقيق السيولة المرورية وتخفيف الازدحام بالمنطقة. 
-
-
-
-
+                        يقع كوبري السكة الحديد بإدفينا بمحافظة البحيرة، بجانب قناطر إدفينا التاريخية على فرع رشيد لنهر النيل، 
+                        ويعد جزءًا أساسيًا من منظومة الري والسكك الحديدية في مصر. 
+                        يربط الكوبري بين منطقة البوصيلي ومدينة دسوق، ويخدم حركة القطارات والملاحة النهرية.
                     </p>
+                </div>
 
+                <div class="detail-card">
+                    <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
+                    <p>
+                        تم إنشاء الكوبري والقناطر المرافقة له في فترة الأربعينيات والخمسينيات من القرن الماضي، 
+                        وتحديدًا في عهد الملك فاروق حوالي عام 1950.  
+                        كان الهدف من إنشائه تعزيز البنية التحتية للنقل البري والمائي وربط مناطق البحيرة بعضها ببعض.
+                    </p>
+                </div>
+
+                <div class="detail-card">
+                    <h2><i class="fas fa-archway"></i> التصميم الهندسي</h2>
+                    <p>
+                        يتميز الكوبري بكونه جزءًا متحركًا يُفتح للسماح بمرور السفن والمراكب في مجرى نهر النيل، 
+                        ويُغلق لعبور القطارات. ويُعتبر الكوبري تحفة هندسية تجمع بين القوة والمتانة والوظيفة العملية، 
+                        ويجسد مهارة المهندسين المصريين في تصميم البنية التحتية للسكك الحديدية والطرق.
+                    </p>
+                </div>
+
+                <div class="detail-card">
+                    <h2><i class="fas fa-road"></i> التطوير الحديث</h2>
+                    <p>
+                        في عام 2016 تم تفقد أعمال تطوير مزلقان محطة قطار إدفينا وإنشاء كوبري جديد للسيارات، 
+                        بهدف تحسين السيولة المرورية وتخفيف الازدحام في المنطقة، مع الحفاظ على الأهمية التاريخية والهندسية للكوبري الأصلي.
+                    </p>
                 </div>
 
 <!-- 
