--- a/specific-tabs/eyelife.html
+++ b/specific-tabs/eyelife.html
@@ -28,6 +28,7 @@
 
             <!-- المعلومات التفصيلية -->
             <h1 class="h11">قصر عين الحياة</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">Ain El Hayat Palace</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -40,28 +41,35 @@
                 </div> -->
 
                 <div class="detail-card">
-                    <h2> معلومات</h2>
+                    <h2><i class="fas fa-landmark"></i> قصر عين الحياة</h2>
                     <p>
-
-مساحة 24 فدانًا ويحتوى على 360 غرفة بعدد أيام السنة!         
-<br>
-قصر عين الحياة.. بناه حفيد محمد على لزوجته قبل 120 عامًا. 
-<br>
-
-وعلى بعد خطوات من «الحديقة اليابانية» وخلف مبنى مستشفى حلوان العام، وبالقرب من مبنى رئاسة الحي، تجد قصر عين الحياة أو بمسمى أدق ما تبقى من القصر الأثري والذي يعد من أكبر قصور الجمهورية.
-<br>
-
-وشيد القصر في 1895، ليكون سكنًا لـ«الأميرة عين الحياة» زوجة السلطان حسين كامل، حفيد محمد علي باشا الكبير، مؤسس الأسرة العلوية في مصر.
-<br>
-
-ويقع القصر على مساحة 24 فدانًا ويحتوى على 365 غرفة بعدد أيام العام، وبالعودة إلى صور القصر التي التقطت له قبل نحو 100 عام نجد القصر يضاهي في روعته أجمل القصور الفرنسية والإنجليزية والتي اشتهرت بمبانيها العالية وجدرانها المنحوتة بالزخارف والتماثيل.
-
-
-
-
-
+                        سُمي القصر باسم الأميرة <strong>عين الحياة</strong>، كريمة الأمير أحمد رفعت باشا وزوجة السلطان حسين كامل، 
+                        حيث أقامت فيه لفترة من الزمن. كما استُخدم القصر لإقامة الخديو <strong>توفيق</strong> في فترات محدودة بعد تعرض قصر عابدين لحرائق.
                     </p>
+                </div>
 
+                <div class="detail-card">
+                    <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
+                    <p>
+                        شُيد القصر عام 1895 على يد حفيد محمد علي باشا الكبير ليكون مقر إقامة الأميرة عين الحياة.  
+                        كان القصر يستخدم لعقد الاجتماعات الرسمية مؤقتًا ويعكس الطابع الفخم للقصور الملكية في ذلك الوقت، قبل أن يتعرض للقليل من الإهمال مع مرور الزمن.
+                    </p>
+                </div>
+
+                <div class="detail-card">
+                    <h2><i class="fas fa-archway"></i> المساحة والتصميم</h2>
+                    <p>
+                        يمتد القصر على مساحة 24 فدانًا ويحتوي على 365 غرفة بعدد أيام السنة.  
+                        يتميز بأسلوب معماري فخم مستوحى من القصور الفرنسية والإنجليزية، مع جدران منحوتة بالزخارف والتماثيل، مما يجعله تحفة معمارية فريدة في مصر.
+                    </p>
+                </div>
+
+                <div class="detail-card">
+                    <h2><i class="fas fa-map-marked-alt"></i> الموقع الحالي</h2>
+                    <p>
+                        يقع القصر بالقرب من الحديقة اليابانية ومبنى مستشفى حلوان العام ورئاسة الحي.  
+                        رغم مرور أكثر من 120 عامًا على بنائه، لا يزال القصر يحتفظ بعظمته التاريخية ويُعد من أكبر قصور الجمهورية.
+                    </p>
                 </div>
 
 <!-- 
