--- a/specific-tabs/khrashi.html
+++ b/specific-tabs/khrashi.html
@@ -28,6 +28,7 @@
 
             <!-- المعلومات التفصيلية -->
             <h1 class="h11">مسجد الخراشى</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">Al-Kharashi Mosque</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -40,23 +41,45 @@
                 </div> -->
 
                 <div class="detail-card">
-                    <h2> معلومات</h2>
+                    <h2><i class="fas fa-mosque"></i> مسجد الخراشي</h2>
                     <p>
+                        يقع مسجد الخراشي في قرية نقرها بمدينة دمنهور بمحافظة البحيرة، 
+                        ويُعد من أقدم وأهم مساجد المحافظة. يشتهر المسجد بوجود ضريح 
+                        <strong>سيدي عبد المتعال الخراشي</strong> أحد أعلام التصوف في المنطقة، 
+                        مما يجعله مزارًا دينيًا وروحيًا لأهالي البحيرة وزوّارها.
+                    </p>
+                </div>
 
-تتميز محافظة البحيرة، بتاريخها الوطني وتراثها المعماري والزخرفي الفريد، ويظهر ذلك في مساجدها والتي تعتبر متحفا مفتوحا للعمارة الإسلامية، فهناك العديد من المدن بالمحافظة التي تحتوي على مساجد تحوي نقوشا كتابية ترجع إلى الفتح الإسلامي لمصر عام (21 هـ /641 م)، حيث انتشرت المساجد في أنحاء مصر ومن بينها محافظ البحيرة ويوجد أهمها برشيد وديبي ودمنهور.
+                <div class="detail-card">
+                    <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
+                    <p>
+                        تشير الكتابات المثبتة على منبر المسجد إلى أنه أُنشئ عام <strong>1300هـ / 1882م</strong>.  
+                        بني المسجد من الطوب الأحمر على مساحة شبه مستطيلة، 
+                        وتم تجديده لاحقًا خلال العصر العثماني، مع الحفاظ على ملامحه التاريخية.  
+                        يُعد المسجد أحد شواهد العمارة الإسلامية في البحيرة، 
+                        خاصة مع ارتباطه بتاريخ القرية وطرق التصوف وروادها.
+                    </p>
+                </div>
 
+                <div class="detail-card">
+                    <h2><i class="fas fa-archway"></i> التصميم المعماري</h2>
+                    <p>
+                        يتميز المسجد بمدخلين في الجدارين الشرقي والشمالي، 
+                        ويضم من الداخل أربعة أروقة موازية لجدار القبلة وتشكلها ثلاثة صفوف من البوائك.  
+                        تعتمد السقوف على أعمدة أسطوانية مكسوة بالبياض، 
+                        كما يتوسط الرواق الثاني <strong>شخشيخة</strong> توفر الإضاءة والتهوية الطبيعية.  
+                        كان للمسجد مئذنة تاريخية هُدمت وبقي منها قاعدة فقط، وما زالت تُعد شاهدًا على عمارته القديمة.
+                    </p>
+                </div>
 
-مسجد "الخراشي"، بدمنهور أنشئ عام 1300 هـ / 1882م طبقا للتاريخ المثبت على المنبر، وهذا المسجد بني من الأجر الأحمر ويشغل مساحة شبه مستطيلة وله مدخلان في الجدار الشرقي والشمالي ويتكون المسجد من الداخل من أربعة أورقة موازية لجار القبلة ومتعامدة عليها في نفس الوقت تشكلها ثلاثة بوائك من العقود التي تحمل السقف الخشبي، والأعمدة التي تحمل هذه العقود أسطوانية الشكل مكسية بالبياض.
-
-وملحق بالمسجد ضريح في النصف الشرقي من الجدار البحري للمسجد ومئذنته هدمت ولم يتبق منها سوى قاعدتها
-
-<br>
-يقع بشارع صلاح الدين أمام مطعم العسال, يعود هذا المسجد إلى العصر المملوكي، وتم 
-تجديده في العصر العثماني، ويوجد المدخل الرئيسي لهذا المسجد في الضلع الجنوبي الغربي، ويدخل منه إلى الرواق الثاني الذي
- يتوسط سقفه شخشيخة لإنارة وتهوية المسجد، والمسجد من الداخل يتكون من أربعة أروقة تفصل بينها ثلاث بانكات، ويتوسط الضلع 
-الجنوبي الشرقي المحراب الذي تعلوه قمرية ويوجد على يمينه المنبر، وهو منبر له درابزين - سياج - من الخشب الخرط الميموني
- المائل وريشتاه مزخرفتان بسدايب من الخشب المعقلي المائل وتتضمن كتابات المنبر آيات قرآنية واسم صانعه أحمد عزيز.
-</p>
+                <div class="detail-card">
+                    <h2><i class="fas fa-feather-alt"></i> المنبر والزخارف</h2>
+                    <p>
+                        يحتوي المسجد على منبر أثري مميز مصنوع من الخشب الخرط الميموني الدقيق، 
+                        وتزيّنه زخارف هندسية وسدايب من الخشب المعقلي.  
+                        تتضمن كتابات المنبر آيات قرآنية واسم صانعه <strong>أحمد عزيز</strong>، 
+                        ويُعد المنبر من أبرز العناصر الفنية التي تُظهر مهارة الصناعات الخشبية في القرن التاسع عشر.
+                    </p>
                 </div>
 
 <!-- 
