--- a/specific-tabs/lion.html
+++ b/specific-tabs/lion.html
@@ -28,6 +28,7 @@
 
             <!-- المعلومات التفصيلية -->
             <h1 class="h11">تمثال اسد دمنهور</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">Damanhur Lion Statue</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -39,28 +40,33 @@
                     <p>يتميز المبنى بتصميم معماري فريد يجمع بين الأصالة والحداثة، حيث تظهر الواجهات الزجاجية الحديثة مع لمسات من الفن الإسلامي في الزخارف والنقوش. تبلغ سعة المسرح الرئيسي حوالي 1000 متفرج.</p>
                 </div> -->
 
-                <div class="detail-card">
-                    <h2> معلومات</h2>
-                    <p>
+<div class="detail-card">
+    <h2><i class="fas fa-paw"></i> تمثال أسد دمنهور</h2>
+    <p>
+        تمثال أثري عُثر عليه في مدينة دمنهور، ويُعد نموذجًا هامًا من فنون التمثال في مصر القديمة، ويرتبط بعبادة الآلهة التي تمثل بالأسد.
+    </p>
+</div>
 
-تمثال "أسد دمنهور" هو تمثال أثري عُثر عليه في مدينة دمنهور وتم نقله من موقعه الأصلي أثناء تجديدات محطة السكة الحديد. حاليًا، التمثال محفوظ في مخازن هيئة الآثار في محافظة كفر الشيخ، وقد تم نقله خوفًا على سلامته. يُعتقد أنه وُجد أثناء شق خط السكة الحديد أو في المناطق المجاورة، وقد يرجع تاريخه إلى فترة انتشار عبادة الآلهة الممثلة بالأسد في مصر القديمة. 
-<br>
-موقعه الحالي: يُحفظ في مخازن هيئة الآثار في كفر الشيخ.
-<br>
+<div class="detail-card">
+    <h2><i class="fas fa-history"></i> التاريخ والأصل</h2>
+    <p>
+        يُعتقد أن التمثال يعود إلى فترة انتشار عبادة الآلهة الممثلة بالأسد في مصر القديمة، وقد وُجد أثناء شق خط السكة الحديد أو في المناطق المجاورة له.
+    </p>
+</div>
 
-سبب النقل: تم نقله للحفاظ على سلامته بسبب أعمال التطوير في محطة السكة الحديد.
-<br>
+<div class="detail-card">
+    <h2><i class="fas fa-map-marked-alt"></i> مكان العثور والنقل</h2>
+    <p>
+        تم العثور على التمثال في مدينة دمنهور أو مناطقها المحيطة، ونُقل من موقعه الأصلي أثناء تجديدات محطة السكة الحديد للحفاظ على سلامته.
+    </p>
+</div>
 
-مكان العثور عليه: المدينة أو المناطق المحيطة بها، ربما أثناء شق خط السكة الحديد.
-<br>
-
-أهميته التاريخية: يُعتقد أنه يرتبط بانتشار عبادة الآلهة التي تمثل بالأسد في مصر القديمة. 
-
-
-
-                    </p>
-
-                </div>
+<div class="detail-card">
+    <h2><i class="fas fa-warehouse"></i> الموقع الحالي</h2>
+    <p>
+        يُحفظ التمثال حاليًا في مخازن هيئة الآثار بمحافظة كفر الشيخ، حيث يتم الاهتمام بصيانته وحمايته من الأضرار.
+    </p>
+</div>
 
 <!-- 
                 <div class="quote-box">
