--- a/specific-tabs/malaha.html
+++ b/specific-tabs/malaha.html
@@ -28,6 +28,7 @@
 
             <!-- المعلومات التفصيلية -->
             <h1 class="h11">ملاحة الرايزونية</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">Rhyzoun salt flat</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -39,31 +40,40 @@
                     <p>يتميز المبنى بتصميم معماري فريد يجمع بين الأصالة والحداثة، حيث تظهر الواجهات الزجاجية الحديثة مع لمسات من الفن الإسلامي في الزخارف والنقوش. تبلغ سعة المسرح الرئيسي حوالي 1000 متفرج.</p>
                 </div> -->
 
-                <div class="detail-card">
-                    <h2> معلومات</h2>
-                    <p>
+<div class="detail-card">
+    <h2><i class="fas fa-water"></i> ملاحة الرايزونية</h2>
+    <p>
+        بحيرة مالحة تقع في وادي النطرون، وتُعرف باسم "بحيرة السماء". تتميز بتركيز عالٍ من الأملاح الطبيعية، وتعد جزءاً من البيئة الفريدة للصحراء الغربية.
+    </p>
+</div>
 
-ملاحة الرايزونية هي واحدة من سبع بحيرات مالحة رئيسية (ملاحات) تقع في منطقة وادي النطرون بمحافظة البحيرة في مصر، وتعرف المنطقة تاريخياً باسم "بحيرة السماء". 
-إليك المزيد من المعلومات عنها:
-الخصائص الرئيسية
-الموقع: تقع في الجزء الشمالي الشرقي من الصحراء الغربية في مصر.
-نوع المياه: هي بحيرة مالحة للغاية، مثل باقي ملاحات الوادي، وتتميز بتركيز عالٍ من الأملاح.
-التكوين الملحي: تحتوي مياهها على معدن النطرون الطبيعي، وهو مزيج من كربونات وبيكربونات الصوديوم، بالإضافة إلى كلوريد وكبريتات الصوديوم. 
-الأهمية التاريخية
-التحنيط الفرعوني: كانت أملاح النطرون المستخرجة من هذه الملاحات هي المكون الأساسي الذي استخدمه المصريون القدماء في عمليات تحنيط المومياوات، حيث كان هذا الملح يساعد على تجفيف الجثث بشكل فعال وحفظها.
-التجارة القديمة: كانت ترسبات النطرون في هذه المنطقة ذات قيمة تجارية عالية في العصور القديمة، وتم تصديرها إلى مناطق أخرى. 
-الأهمية الحديثة والاستثمار
-الثروة القومية: تُعتبر ملاحات وادي النطرون، بما فيها الرايزونية، ثروة قومية لمصر.
-الاستثمار والسياحة العلاجية: تسعى الحكومة المصرية والمستثمرون إلى استغلال هذه الملاحات في مجالات متعددة، أبرزها:
-السياحة العلاجية: المنطقة غنية بالرمال الفريدة والمياه المالحة التي تُستخدم في العلاج الطبيعي والاستشفاء.
-الاستخراج الصناعي: لا تزال الأملاح تُستخرج منها لأغراض صناعية وتجارية. 
-الحياة البرية
-منطقة بيئية: تقع المنطقة ضمن بيئة صحراوية جافة، وتعد موطنًا محتملاً لبعض الحيوانات البرية مثل الغزلان المصرية (وهي أنواع محمية يمنع صيدها) التي تتكيف مع هذه البيئات. 
+<div class="detail-card">
+    <h2><i class="fas fa-map-marked-alt"></i> الموقع</h2>
+    <p>
+        تقع الملاحة في الجزء الشمالي الشرقي من وادي النطرون بمحافظة البحيرة، ضمن منطقة صحراوية جافة.
+    </p>
+</div>
 
+<div class="detail-card">
+    <h2><i class="fas fa-flask"></i> الخصائص الملحية</h2>
+    <p>
+        تحتوي مياه الملاحة على معدن النطرون الطبيعي، وهو مزيج من كربونات وبيكربونات الصوديوم، بالإضافة إلى كلوريد وكبريتات الصوديوم، مما يجعلها مالحة للغاية.
+    </p>
+</div>
 
-                    </p>
+<div class="detail-card">
+    <h2><i class="fas fa-history"></i> الأهمية التاريخية</h2>
+    <p>
+        استخدم المصريون القدماء أملاح النطرون في التحنيط، وكانت ترسباتها ذات قيمة تجارية عالية وتم تصديرها للعالم القديم.
+    </p>
+</div>
 
-                </div>
+<div class="detail-card">
+    <h2><i class="fas fa-leaf"></i> الحياة البرية والبيئة</h2>
+    <p>
+        تعد الملاحة جزءاً من بيئة صحراوية محمية، وتستضيف أنواعاً محمية من الحيوانات مثل الغزلان المصرية، إضافةً إلى كونها مكاناً للسياحة العلاجية.
+    </p>
+</div>
 
 <!-- 
                 <div class="quote-box">
