--- a/specific-tabs/mikhaiel.html
+++ b/specific-tabs/mikhaiel.html
@@ -28,6 +28,7 @@
 
             <!-- المعلومات التفصيلية -->
             <h1 class="h11">كنيسة الملاك ميخائيل</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">Church of the Archangel Michael</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -39,17 +40,37 @@
                     <p>يتميز المبنى بتصميم معماري فريد يجمع بين الأصالة والحداثة، حيث تظهر الواجهات الزجاجية الحديثة مع لمسات من الفن الإسلامي في الزخارف والنقوش. تبلغ سعة المسرح الرئيسي حوالي 1000 متفرج.</p>
                 </div> -->
 
-                <div class="detail-card">
-                    <h2> معلومات</h2>
-                    <p>
+<div class="detail-card">
+    <h2><i class="fas fa-church"></i> كنيسة الملاك ميخائيل</h2>
+    <p>
+        تعد كنيسة الملاك ميخائيل بدمنهور من أقدم الكنائس في مصر، وتشتهر بكونها أيقونة عصر الاستشهاد ومتحف كنوز الفن القبطي.  
+        تحتوي الكنيسة على 72 أيقونة تمثل موضوعات من العهد القديم والمسيحي، بما في ذلك البشارة والميلاد والصلب والصعود والملائكة والشهداء.
+    </p>
+</div>
 
-تحتوى کنيسة الملاک بدمنهور على اثنتين وسبعين أيقونة تمثل موضوعات متعددة ومتنوعة سواء من العهد القديم لقصص الأنبياء قبل المسيح ، أو موضوعات تعبر عن الدين المسيحي کالبشارة والميلاد والعماد والصلب والقيامة والصعود وغيرها ، وکذلک أيقونات تمثل الملائکة والقديسين والشهداء إلى آخره من الموضوعات التى تميزت بها الأيقونات وخاصة فى مصر.وحيث أنه يتعذر دراسة کل هذه الأيقونات فى بحث واحد فقد تم اختيار بعض هذه الأيقونات المميزة التى تمثل الموضوعات المتنوعة المرسومة فى باقى الأيقونات بالکنيسة.فمن موضوعات العهد القديم تم دراسة أيقونة تمثل صعود إيليا الى السماء ، وقد تميزت هذه الأيقونة باحتوائها على اسم واقفها على الکنيسة وکذلک المدينة التى رسمت فيها وسنة رسمها 1571 للشهداء.ومن الموضوعات المسيحية تم دراسة عدة أيقونات تمثل هذه الموضوعات مثل: أيقونة البشارة ، أيقونة العذراء والطفل (التجسد) ، أيقونة العماد ، أيقونة دخول المسيح أورشليم ، أيقونة السيد المسيح (ضابط الکون) ، أيقونة الصلبوت.ومن الأيقونات التى تمثل الملائکة تم دراسة أيقونة تمثل الملاک ميخائيل التى سميت الکنيسة باسمه ، وقد تميزت هذه الأيقونة باحتوائها على کتابات دعائية بالخط العربي ، وتاريخ الأيقونة بالأرقام القبطية ويمثل سنة 1466 للشهداء الذى يقابل سنة 1163 ه / 1750 م.ومن أيقونات القديسين تم دراسة أيقونة تمثل القديس بطرس وبولس ، وتتميز باحتوائها على سطرين أسفل الأيقونة بالخط العربي يحتوى اسم واقف الأيقونة واسم الرسام (انسطاسى الرومي) وسنة رسمها 1571 للشهداء.ومن أيقونات الشهداء تم دراسة أيقونة القديسة دميانة والأربعين قديسة الشهيدات ، وأيقونة الشهيد مارجرجس الروماني ، وأيقونة رأس القديس يوحنا المعمدان.وهذه الأيقونات المختارة رسمت فى القرنين الثانى عشر والثالث عشر للهجرة / الثامن عشر والتاسع عشر للميلاد ، وتنوعت الأساليب الفنية المستخدمة بين الأسلوب القبطي والأورشليمي واليوناني ، ونفذت بأسلوب التمبرا.
+<div class="detail-card">
+    <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
+    <p>
+        تحتوي الكنيسة على أيقونات يعود بعضها إلى القرن الثاني عشر والثالث عشر للهجرة (القرن الثامن عشر والتاسع عشر الميلادي)،  
+        مثل أيقونة الملاك ميخائيل التي سميت الكنيسة باسمه، وأيقونة القديسين بطرس وبولس، وأيقونة الشهيد مارجرجس.
+    </p>
+</div>
 
+<div class="detail-card">
+    <h2><i class="fas fa-paint-brush"></i> الطراز الفني</h2>
+    <p>
+        تنوعت الأساليب الفنية للأيقونات بين القبطي والأورشليمي واليوناني، ونُفذت بأسلوب التمبرا.  
+        تحتوي الأيقونات على كتابات بالخط العربي والأرقام القبطية لتوثيق تاريخ الرسم واسم الرسام، مثل أنسطاسى الرومي.
+    </p>
+</div>
 
-
-                    </p>
-
-                </div>
+<div class="detail-card">
+    <h2><i class="fas fa-users"></i> الموضوعات والرموز</h2>
+    <p>
+        تشمل الموضوعات أيقونات من العهد القديم مثل صعود إيليا إلى السماء، والمواضيع المسيحية مثل البشارة والعذراء والطفل، والصلب والقيامة.  
+        كما تتضمن أيقونات للشهداء مثل القديسة دميانة والأربعين قديسة الشهيدات، ورأس القديس يوحنا المعمدان.
+    </p>
+</div>
 
 <!-- 
                 <div class="quote-box">
