--- a/specific-tabs/opera-damanhur.html
+++ b/specific-tabs/opera-damanhur.html
@@ -28,6 +28,7 @@
 
             <!-- المعلومات التفصيلية -->
             <h1 class="h11">دار أوبرا دمنهور</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">Damanhour Opera House</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
