--- a/specific-tabs/qanater.html
+++ b/specific-tabs/qanater.html
@@ -28,6 +28,7 @@
 
             <!-- المعلومات التفصيلية -->
             <h1 class="h11">قناطر إدفينا</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">Edvina Aqueducts</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -39,22 +40,33 @@
                     <p>يتميز المبنى بتصميم معماري فريد يجمع بين الأصالة والحداثة، حيث تظهر الواجهات الزجاجية الحديثة مع لمسات من الفن الإسلامي في الزخارف والنقوش. تبلغ سعة المسرح الرئيسي حوالي 1000 متفرج.</p>
                 </div> -->
 
-                <div class="detail-card">
-                    <h2> معلومات</h2>
-                    <p>
+<div class="detail-card">
+    <h2><i class="fas fa-water"></i> قناطر إدفينا</h2>
+    <p>
+        الممر الرئيسي الذي يربط بين محافظات كفر الشيخ والبحيرة والإسكندرية، ويعد القناطر الوحيدة التي تحجز مياه فرع رشيد عن مياه البحر الأبيض المتوسط.
+    </p>
+</div>
 
-قناطر إدفينا، هي الممر الرئيسي الذي يربط بين محافظات كفر الشيخ والبحيرة والإسكندرية، وتقع عند نهاية قرية إدفينا، مركز رشيد، محافظة البحيرة. وهي القناطر الوحيدة التي تحجز مياه نهر النيل فرع رشيد عن مياه البحر الأبيض المتوسط
+<div class="detail-card">
+    <h2><i class="fas fa-history"></i> التاريخ</h2>
+    <p>
+        بدأ إنشاء قناطر إدفينا عام 1949 وافتتحها مصطفى النحاس باشا رئيس وزراء مصر عام 1951، لتصبح جزءًا هامًا من منظومة الري والملاحة في دلتا النيل.
+    </p>
+</div>
 
-<br>
-تم البدء في انشاء القناطر عام 1949 وافتتحها مصطفى النحاس باشا رئيس وزراء مصر عام 1951.
-<br>
-وتنتشر فيها خمسة حدائق بالبر الأيسر مساحتها 25 فدان، والبر الأيمن به حديقتان مقامة على عشرة أفدنة وبهما مشتل لانتاج الزهور والنباتات النادرة ومسطحات خضراء وأحواض وأشكال هندسية ونافورات وحديقتان لمساحة 100 فدان منزرعة بالموالح والفاكهة وتقع القناطر على بعد 20 كم جنوبى مدينة رشيد وهى تمثل موقعاً ومزاراً سياحياً وعلى مقربة منها تقع مدينة مطوبس وقرية أبيانة التى ولد بها الزعيم التاريخى الراحل سعد زغلول.
+<div class="detail-card">
+    <h2><i class="fas fa-map-marked-alt"></i> الموقع</h2>
+    <p>
+        تقع القناطر عند نهاية قرية إدفينا، مركز رشيد، على بعد 20 كم جنوب مدينة رشيد بمحافظة البحيرة، بالقرب من مدينة مطوبس وقرية أبيانة.
+    </p>
+</div>
 
-
-
-                    </p>
-
-                </div>
+<div class="detail-card">
+    <h2><i class="fas fa-tree"></i> المرافق والحدائق</h2>
+    <p>
+        تحتوي القناطر على حدائق واسعة في البر الأيسر والأيمن، بمساحات تصل إلى 100 فدان، تشمل مسطحات خضراء، مشاتل للنباتات والزهور، نافورات وأحواض، وتزرع بالموالح والفاكهة.
+    </p>
+</div>
 
 <!-- 
                 <div class="quote-box">
