--- a/specific-tabs/rashid-stone.html
+++ b/specific-tabs/rashid-stone.html
@@ -28,6 +28,7 @@
 
             <!-- المعلومات التفصيلية -->
             <h1 class="h11">حجر رشيد</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">Rashid stone</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -39,36 +40,33 @@
                     <p>يتميز المبنى بتصميم معماري فريد يجمع بين الأصالة والحداثة، حيث تظهر الواجهات الزجاجية الحديثة مع لمسات من الفن الإسلامي في الزخارف والنقوش. تبلغ سعة المسرح الرئيسي حوالي 1000 متفرج.</p>
                 </div> -->
 
-                <div class="detail-card">
-                    <h2> معلومات</h2>
-                    <p>
+<div class="detail-card">
+    <h2><i class="fas fa-scroll"></i> مرسوم كانوب (Decree of Canopus)</h2>
+    <p>
+        نقش ثلاثي اللغة يعود إلى الفترة البطلمية في مصر القديمة، كُتب بثلاثة أنظمة كتابة: الهيروغليفية المصرية، الديموطية، واليونانية الكوينية.
+    </p>
+</div>
 
-مرسوم ملكي يعود تاريخه إلى عام 196 قبل الميلاد، وهو مكتوب بثلاث لغات مختلفة: الهيروغليفية (للنص الرسمي والديني)، والديموطيقية (اللغة العامية المصرية)، واليونانية القديمة
-<br>
-حجر رشيد هو نصب من حجر الديوريت مع مرسوم صدر في ممفيس، مصر، في 196 قبل الميلاد نيابة عن الملك بطليموس الخامس.
-<br>
-يظهر المرسوم في ثلاثة نصوص: النص العلوي هو اللغة المصرية القديمة بالخط الهيروغليفي، والجزء الأوسط نص ديموطيقي، والجزء الأدنى اليونانية القديمة. لأنه يقدم أساسا نفس النص في جميع النصوص الثلاثة (مع بعض الاختلافات الطفيفة بينهم)، الحجر يعطي مفتاح الفهم الحديث للخط للهيروغليفي.
-<br>
-ويعتقد أن الحجر قد تم عرضه أصلا ضمن معبد مصري، وربما بالقرب من صا الحجر. ربما كان قد نقل خلال المسيحيين الأوائل في العصور الوسطى، وكان يستخدم في نهاية المطاف كمادة بناء في بناء طابية رشيد بالقرب من مدينة رشيد (رشيد) في دلتا النيل. تم اكتشافه هناك في عام 1799 على يد جندي يدعى بيير فرانسوا بوشار من حملة نابليون على مصر. وكان هذا أول نص بلغتين مصريتين قديمتين، وأنه قد أثار اهتمام الجمهور على نطاق واسع مع قدرته على فك أسرار اللغة المصرية القديمة غير المترجمة سابقا.
-<br>
-وقد نقش عام 196 ق.م. وهذا الحجر مرسوم ملكي صدر في مدينة منف عام 196 ق.م. وقد أصدره الكهان كرسالة شكر لبطليموس الخامس لأنه رفع الضرائب عنهم، وعليه ثلاث لغات المصرية القديمة والديموطقية والإغريقية، وكان وقت اكتشافه لغزا لغويا لايفسر منذ مئات السنين، لأن اللغات الثلاثة كانت وقتها من اللغات الميتة، حتى جاء العالم الفرنسي جيان فرانسوا شامبليون وفسر هذه اللغات بعد مضاهاتها بالنص اليوناني ونصوص مصرية قديمة أخرى، وهذا يدل على أن هذه اللغات كانت سائدة إبان حكم البطالمة لمصر لأكثر من 150 عاما، وكانت المصرية القديمة هى اللغة الدينية المقدسة متداولة في المعابد، واللغة الديموطيقية كانت لغة الكتابة الشعبية (العامية المصرية)، واليونانية القديمة كانت لغة الحكام الإغريق، وكان قد ترجم إلى اللغة اليونانية لكي يفهموه. وكان محتوى الكتابة تمجيدا لفرعون مصر وإنجازاته الطيبة للكهنة وشعب مصر، وقد كتبه الكهنة ليقرأه العامة والخاصة من كبار المصريين والطبقة الحاكمة. تمكن العلماء العرب من اكتشاف اثنين من المبادئ الأساسية في الموضوع، أولهما أن بعض الرموز تعبر عن أصوات، والثاني أن الرموز الأخرى تعبر عن معنى الكلمة بطريقة تصويرية.
-<br>
-وحقق هذا الإنجاز أحمد بن أبي بكر بن وحشية، وهو عالم عاش في العراق في القرنين التاسع والعاشر الميلاديين، وترجم مؤلفه "شوق المستهام في معرفة رموز الأقلام" عن أنظمة الكتابة القديمة إلى الإنجليزية، ونشر في لندن عام 1806.
-<br>
-وقال الدالي "أدركوا أنها ليست صورا كما كان سائدا بين الكتاب الكلاسيكيين، كان ابن وحشية أول باحث على الإطلاق يتحدث عن الرموز الدالة على المعنى والتي وصفها في فقرة يمكن أن يتباهى بها أي باحث حديث".
-<br>
-وهناك باحث آخر هو الصوفي ذو النون المصري الذي نشأ في صعيد مصر ببلدة أخميم في بداية القرن التاسع الميلادي عندما كان أغلب السكان المحليين لا يزالون يتحدثون القبطية سليلة لغة المصريين القدماء. وما كان شامبليون ليستطيع فك رموز الهيروغليفية دون معرفته للقبطية التي اندثرت من حياة المصريين اليومية في العصور الوسطى ولا توجد الآن إلا في قداسات الكنيسة المصرية. وكان العالم البريطاني توماس يانج قد اكتشف الكتابة بالمصرية القديمة لها دلالات صوتية، وأن الأسماء الملكية مكتوبة داخل أشكال بيضاوية (خراطيش)، وهذا الاكتشاف أدى إلى أن فك العالم الفرنسي جان فرانسوا شامبليون رموز الكتابة الهيروغليفية، واستطاع شامبليون فك شفرة الهيروغليفية عام 1822 م، لأن النص اليوناني عبارة عن 54 سطرا وسهل القراءة مما جعله يميز أسماء الحكام البطالمة المكتوبة باللغة العامية المصرية. وبهذا الكشف فتح آفاق التعرف على حضارة قدماء المصريين وفك ألغازها، وترجمة علومها بعد إحياء لغتهم بعد موتها عبر القرون. وأصبحت المصرية القديمة وخطها الهيروغليفي وأبجديتها تدرس لكل من يريد دراسة علوم المصريات. والحجر أخذه البريطانيون من القوات الفرنسية، ووضعوه في المتحف البريطاني.
-<br>
-نسخ حجرية ونسخ جصية مصبوبة بدأ تداولها بين المتاحف والعلماء الأوروبيين. وفي الوقت نفسه، هزمت القوات البريطانية الفرنسيين في مصر عام 1801، وأصبح الحجر الأصلي في حوزة البريطانيين بعد استسلام الحملة الفرنسية و نقل إلى لندن. وعرض على الملأ في المتحف البريطاني بشكل مستمر تقريبا منذ عام 1802.وكان الأثر الأكثر زيارة في المتحف البريطاني.
-<br>
-و كانت سبب تسمية حجر رشيد بهذا الاسم لانه اكتشف بمدينة رشيد الواقعة على مصب فرع نهر النيل في البحر المتوسط.
+<div class="detail-card">
+    <h2><i class="fas fa-history"></i> التاريخ</h2>
+    <p>
+        يُسجل المرسوم أحداث مجمع كبير للكهنة عقد في كانوب بتاريخ 7 مارس 238 قبل الميلاد، في السنة التاسعة من حكم بطليموس الثالث أورجيتس.
+    </p>
+</div>
 
+<div class="detail-card">
+    <h2><i class="fas fa-archway"></i> الهدف</h2>
+    <p>
+        كَرّم المرسوم الفرعون بطليموس الثالث، وزوجته الملكة برنيكه، وابنته الأميرة برنيكه، وسجّل القرارات والاحتفالات الرسمية للكهنة.
+    </p>
+</div>
 
-
-
-                    </p>
-
-                </div>
+<div class="detail-card">
+    <h2><i class="fas fa-landmark"></i> الأهمية التاريخية</h2>
+    <p>
+        يُعد المرسوم وثيقة تاريخية هامة لفهم الإدارة الدينية والسياسية في مصر البطلمية، ويُظهر العلاقة بين الفراعنة والكهنة ومكانة الأسرة الملكية.
+    </p>
+</div>
 
 <!-- 
                 <div class="quote-box">
