--- a/specific-tabs/rooms.html
+++ b/specific-tabs/rooms.html
@@ -28,6 +28,7 @@
 
             <!-- المعلومات التفصيلية -->
             <h1 class="h11">كوم الغرف</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">The Rooms</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -39,43 +40,44 @@
                     <p>يتميز المبنى بتصميم معماري فريد يجمع بين الأصالة والحداثة، حيث تظهر الواجهات الزجاجية الحديثة مع لمسات من الفن الإسلامي في الزخارف والنقوش. تبلغ سعة المسرح الرئيسي حوالي 1000 متفرج.</p>
                 </div> -->
 
-                <div class="detail-card">
-                    <h2> معلومات</h2>
-                    <p>
+<div class="detail-card">
+    <h2><i class="fas fa-landmark"></i> تل كوم الغرف</h2>
+    <p>
+        تل أثري يقع في مركز المحمودية بمحافظة البحيرة، ويُعرف أيضًا باسم "تل كوم الغرف الأثري". يُعد من أهم التلال الأثرية في المحافظة.
+    </p>
+</div>
 
-يُعد تل كوم الغرف واحدًا من أهم التلال الأثرية في محافظة البحيرة، وتشير الاكتشافات إلى أنه كان موقعًا حضاريًا هامًا عبر عدة عصور تاريخية. 
-<br>
-الموقع والمساحة
-<br>
-يقع التل في مركز المحمودية بمحافظة البحيرة، ويغطي مساحة كبيرة تبلغ حوالي 104 فدانًا. 
-<br>
-الأهمية التاريخية والحضارية
-<br>
-عاصمة محتملة: من المرجح أن تل كوم الغرف كان في الماضي عاصمة لمقاطعة تُدعى "ميتيليت" (Metelete)، والتي كانت من أهم المواقع الحضارية في منطقة الدلتا.
-<br>
-تعدد العصور: كشفت الحفائر عن وجود آثار تعود إلى العصور الفرعونية والرومانية والقبطية، مما يدل على استمرارية الأهمية السكنية والحضارية للموقع عبر فترات زمنية طويلة.
-<br>
-مجتمع سكني كبير: تم الكشف عن بقايا مجتمع سكني واسع، يتكون من مساكن مبنية بالطوب اللبن، بالإضافة إلى بعض البوابات التي كانت جزءًا من مدينة بيزنطية. 
-<br>
-الاكتشافات الأثرية
-<br>
-أثناء عمليات المسح الأثري والتنقيب، تم العثور على:
-<br>
-مساكن مطمورة وحمامات معقودة.
-<br>
-ظروف (أوانٍ فخارية أو ما شابه) تحتوي بداخلها على قطع نحاسية قديمة.
-<br>
-تعد المنطقة جزءاً من خطة الدولة لتطوير وحماية التلال الأثرية، وتخضع لإشراف هيئة الآثار. 
-<br>
-تُظهر هذه المعلومات أن "كوم الغرف" ليس مجرد تل عادي، بل هو كنز أثري يختبئ تحت طبقات الأرض، ويحكي تاريخ منطقة الدلتا عبر آلاف السنين.
+<div class="detail-card">
+    <h2><i class="fas fa-map-marker-alt"></i> الموقع والمساحة</h2>
+    <p>
+        يقع في مركز المحمودية ويغطي مساحة كبيرة تبلغ حوالي 104 فدانًا، ما يجعله موقعًا حضاريًا هامًا عبر عدة عصور.
+    </p>
+</div>
 
+<div class="detail-card">
+    <h2><i class="fas fa-history"></i> الأهمية التاريخية والحضارية</h2>
+    <p>
+        - عاصمة محتملة لمقاطعة "ميتيليت" (Metelete) في الماضي.<br>
+        - يحتوي على آثار من العصور الفرعونية والرومانية والقبطية.<br>
+        - بقايا مجتمع سكني واسع مع مساكن مبنية بالطوب اللبن وبوابات جزء من مدينة بيزنطية.
+    </p>
+</div>
 
+<div class="detail-card">
+    <h2><i class="fas fa-tools"></i> الاكتشافات الأثرية</h2>
+    <p>
+        - مساكن مطمورة وحمامات معقودة.<br>
+        - أواني فخارية تحتوي على قطع نحاسية قديمة.<br>
+        - آثار تعكس استمرارية الأهمية السكنية والحضارية عبر آلاف السنين.
+    </p>
+</div>
 
-
-
-                    </p>
-
-                </div>
+<div class="detail-card">
+    <h2><i class="fas fa-shield-alt"></i> الحماية والتطوير</h2>
+    <p>
+        المنطقة جزء من خطة الدولة لتطوير وحماية التلال الأثرية، وتخضع لإشراف هيئة الآثار، لضمان الحفاظ على هذا الكنز التاريخي.
+    </p>
+</div>
 
 <!-- 
                 <div class="quote-box">
