--- a/specific-tabs/sidi-omar.html
+++ b/specific-tabs/sidi-omar.html
@@ -28,6 +28,7 @@
 
             <!-- المعلومات التفصيلية -->
             <h1 class="h11">مسجد سيدي عمر</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">Sidi Omar Mosque</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -39,27 +40,37 @@
                     <p>يتميز المبنى بتصميم معماري فريد يجمع بين الأصالة والحداثة، حيث تظهر الواجهات الزجاجية الحديثة مع لمسات من الفن الإسلامي في الزخارف والنقوش. تبلغ سعة المسرح الرئيسي حوالي 1000 متفرج.</p>
                 </div> -->
 
-                <div class="detail-card">
-                    <h2> معلومات</h2>
-                    <p>
+<div class="detail-card">
+    <h2><i class="fas fa-mosque"></i> مسجد سيدي عمر الإفلاقي</h2>
+    <p>
+        يعد مسجد العارف بالله سيدى عمر الإفلاقي من أهم مساجد دمنهور، ويقع في الحي الذي يحمل اسمه بوسط المدينة.  
+        يتميز المسجد بأهمية روحية وتاريخية كبيرة، ويعتبر ضريحه قبلة لكافة الطرق الصوفية وخاصة الطريقة العزمية.
+    </p>
+</div>
 
-يرجع نسب العارف بالله سيدى عمر الإفلاقى إلى الإمام الحسين رضى الله عنه حفيد الرسول صلى الله عليه وسلم، ومن ذرية سيدى موسى أبى العمران الشقيق الأصغر لسيدى إبراهيم القرشى الدسوقى، الذى يمتد نسبه لسيدنا على بن أبى طالب رضى الله عنه وأرضاه.
-<br>
-يعد مسجد سيدى الإفلاقى بوسط مدينة دمنهور، أحد معالم المدينة، وذلك لقيمته المعمارية وتاريخه العريق الذى يصل إلى أكثر من 200 عاما والذى دفن فى رحابه الشيخ عمر الإفلاقى. وهو من أكثر المساجد شعبية بمدينة دمنهور ويتوافد عليه المئات من الأهالى خاصة فى شهر رمضان الكريم، ويعتبر ضريحه قبلة لكافة الطرق الصوفية خاصة الطريقة العزمية التى تعقد به حضرات الذكر النبوية والجلسات الدينية منذ عدة سنوات.
-<br>
+<div class="detail-card">
+    <h2><i class="fas fa-history"></i> النسب والتاريخ</h2>
+    <p>
+        يرجع نسب سيدى عمر الإفلاقي إلى الإمام الحسين رضي الله عنه، حفيد الرسول ﷺ، ومن ذرية سيدى موسى أبي العمران.  
+        المسجد يزيد عمره عن 200 عام، وكان مركزًا للعبادة والذكر الروحي منذ تأسيسه.
+    </p>
+</div>
 
-مر مسجد سيدى عمر الافلاقى بالعديد من أعمال الترميم كان آخرها منذ حوالى 5 سنوات، والتى تضمنت تطويرا شاملا فى أركان المسجد.
-<br>
+<div class="detail-card">
+    <h2><i class="fas fa-archway"></i> الطراز المعماري والتطوير</h2>
+    <p>
+        المسجد يعكس العمارة الإسلامية التقليدية، وقد مر بالعديد من أعمال الترميم، آخرها منذ حوالي 5 سنوات،  
+        والتي شملت تطوير أركان المسجد وتحسين مرافقه لاستقبال المصلين والزوار.
+    </p>
+</div>
 
-وقال الشيخ الحسينى المعاملى إمام مسجد سيدى عمر الإفلاقى، أن هذا المسجد معطر بروح صاحبة أحد الاشراف الذى يمتد نسبة إلى الرسول صلى الله عليه وسلم، مضيفا أن النفحات الروحانية لشهر رمضان المبارك تتجلى فى هذا المسجد العامر، والذى يعكس عبق أهل البيت والذى يتوافد عليه المئات المواطنين لأداء صلاة التراويح والتهجد فى أواخر الشهر الكريم.
-<br>
-
-وأوضح الشيخ الحسينى إمام مسجد الإفلاقى، أن هناك خطة متكاملة من قبل وزارة الأوقاف خلال شهر رمضان الكريم فى رحاب هذا المسجد العامر، تتضمن مقارئ القرآن الكريم وحلقات ذكر النبى، إضافة إلى إقامة الندوات الدينية وحلقات تحفيظ القرآن الكريم.
-
-
-                    </p>
-
-                </div>
+<div class="detail-card">
+    <h2><i class="fas fa-users"></i> الأنشطة الدينية والروحانية</h2>
+    <p>
+        يُقام في المسجد خلال شهر رمضان الكريم صلوات التراويح والتهجد، وحلقات ذكر النبى، ومقارئ القرآن الكريم،  
+        كما تُعقد الندوات الدينية وحلقات تحفيظ القرآن، مما يجعله مركزًا روحانيًا هامًا للمجتمع.
+    </p>
+</div>
 
 <!-- 
                 <div class="quote-box">
