--- a/specific-tabs/tahona.html
+++ b/specific-tabs/tahona.html
@@ -28,6 +28,7 @@
 
             <!-- المعلومات التفصيلية -->
             <h1 class="h11">طاحونة أبو شاهين</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">Abu Shahin Mill</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -40,26 +41,37 @@
                 </div> -->
 
                 <div class="detail-card">
-                    <h2> معلومات</h2>
+                    <h2><i class="fas fa-building"></i> طاحونة أبو شاهين</h2>
                     <p>
-
-تعد مدينة رشيد الساحلية، بتاريخها العريق ومبانيها الأثرية، متحفاً مفتوحاً يحكي قصصاً من عصور مختلفة، أبرزها العصر العثماني. ومن بين المعالم البارزة التي لا تزال قائمة وشاهدة على تلك الفترة الزمنية طاحونة "أبو شاهين" الأثرية، التي تعتبر واحدة من أهم نماذج الطواحين التي كانت تُدار بالحيوانات في مصر.
-<br>الموقع والتاريخ <br>
-تقع طاحونة أبو شاهين في شارع الأمصيلي الشهير، وهو أحد الشوارع الحيوية والتاريخية في قلب مدينة رشيد بمحافظة البحيرة. يعود تاريخ إنشاء الطاحونة إلى نهاية القرن الثامن عشر الميلادي، وتحديداً في عام 1808م، أو النصف الثاني من القرن الثاني عشر الهجري.<br>
-باني هذه الطاحونة هو الأمير عثمان أغا الطوبجي، الذي كان يشغل منصباً رفيعاً كقائد للمدفعية في الجيش العثماني آنذاك. وقد صممها لتكون جزءاً من مجمع معماري متكامل يضم أيضاً منزل الأمصيلي الأثري الشهير.<br>
-الطراز المعماري ووظيفتها<br>
-تتميز طاحونة أبو شاهين بطراز معماري فريد يعكس فن البناء العثماني، حيث شُيدت باستخدام الطوب الأحمر والأسود المتناوب في صفوف أفقية، مما يمنحها شكلاً جمالياً مميزاً وقوة في البناء.<br>
-كانت الوظيفة الأساسية للطاحونة هي طحن الحبوب، وخاصة القمح، لإنتاج الدقيق اللازم لسكان المدينة. ولم تكن هذه الطاحونة تعمل بالرياح أو بالماء، بل كانت تعتمد على القوة الحيوانية؛ حيث كانت تُدار بواسطة الخيول التي تدور حول محور مركزي لتحريك أحجار الطحن الثقيلة.<br>
-دورها الخيري والاجتماعي<br>
-لم تكن طاحونة أبو شاهين مجرد منشأة اقتصادية بحتة، بل ارتبطت ارتباطاً وثيقاً بالحياة الخيرية والاجتماعية في رشيد. فقد كان ريع هذه الطاحونة يُخصص بالكامل كمصدر دخل ثابت ومستمر للإنفاق على مسجد المحلي الأثري، وهو أحد أكبر وأقدم مساجد المدينة، لضمان استمرار صيانته وتوفير احتياجاته. هذا الجانب يعكس نظام الأوقاف المعمول به في تلك الحقبة، والذي كان يضمن استمرارية المؤسسات الدينية والخدمية.<br>
-أهميتها السياحية<br>
-تعتبر طاحونة أبو شاهين اليوم معلماً سياحياً وأثرياً هاماً، وهي مفتوحة للزوار الذين يرغبون في رؤية نموذج حي ومحفوظ لطريقة العيش والإنتاج في العصر العثماني. تجسد الطاحونة فصلاً من تاريخ رشيد كمدينة مزدهرة ومركز تجاري وعسكري مهم على ساحل البحر المتوسط، وتوثق جانباً من التراث المعماري المصري الفريد.<br>
-باختصار، طاحونة أبو شاهين ليست مجرد بناء قديم، بل هي قطعة حية من التاريخ تحكي قصة مدينة وشعب عاشوا وازدهروا على ضفاف النيل.<br>
-
-
-
+                        تقع طاحونة أبو شاهين في شارع الأمصيلي بمدينة رشيد بمحافظة البحيرة،  
+                        وتمثل أحد أهم نماذج الطواحين التي كانت تُدار بالقوة الحيوانية في مصر.  
+                        باني الطاحونة هو الأمير عثمان أغا الطوبجي، قائد المدفعية في الجيش العثماني آنذاك.
                     </p>
+                </div>
 
+                <div class="detail-card">
+                    <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
+                    <p>
+                        تم بناء الطاحونة عام 1808م (نهاية القرن الثامن عشر الميلادي)،  
+                        كجزء من مجمع معماري متكامل يضم منزل الأمصيلي الأثري.  
+                        كانت الطاحونة تخدم السكان المحليين وتعتبر من أقدم المنشآت الإنتاجية في المدينة.
+                    </p>
+                </div>
+
+                <div class="detail-card">
+                    <h2><i class="fas fa-archway"></i> الطراز المعماري والوظيفة</h2>
+                    <p>
+                        شُيدت الطاحونة باستخدام الطوب الأحمر والأسود بشكل متناوب، مما يمنحها جمالية وقوة في البناء.  
+                        كانت تعتمد على القوة الحيوانية لتدوير أحجار الطحن الثقيلة لطحن الحبوب، خاصة القمح، لإنتاج الدقيق لسكان المدينة.
+                    </p>
+                </div>
+
+                <div class="detail-card">
+                    <h2><i class="fas fa-hand-holding-heart"></i> الدور الاجتماعي والسياحي</h2>
+                    <p>
+                        لم تكن الطاحونة اقتصادية فقط، بل كان ريعها يُخصص لصيانة مسجد محلي أثري وضمان استمرارية الخدمات الدينية.  
+                        اليوم، تُعد الطاحونة معلماً سياحياً وتاريخياً، وهي مفتوحة للزوار للتعرف على أسلوب الحياة والإنتاج في العصر العثماني بمدينة رشيد.
+                    </p>
                 </div>
 
 <!-- 
