--- a/specific-tabs/toba.html
+++ b/specific-tabs/toba.html
@@ -28,6 +28,7 @@
 
             <!-- المعلومات التفصيلية -->
             <h1 class="h11">مسجد التوبة</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">Toba Mosque</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -40,17 +41,36 @@
                 </div> -->
 
                 <div class="detail-card">
-                    <h2> معلومات</h2>
+                    <h2><i class="fas fa-mosque"></i> مسجد التوبة</h2>
                     <p>
-
-يقع بشارع عرابى بالقرب من محطة السكة الحديد وقد شيده عمرو بن العاص رضى الله عنة سنة 21 هجريا قبل فتح الإسكندرية ويعد ثاني مسجد بني في أفريقيا بعد مسجد عمرو بن العاص بالقاهرة، وهو تحفة من العمارة الإسلامية وبه عمود من الرخام الخالص من أفضل أنواع الرخام فى العالم, ويكمن سبب تسمية مسجد التوبة بهذا الاسم؛ لكون التائبون يقصدونه للأوبة والتوبة إلى الله ، وللمسجد أيضا دور اجتماعي هام لأهالي المدينة، حيث يوجد به معهد الإعداد الدعاة ودار لتحفيظ القرآن الكريم وفصول تقوية ويقصده المسلمون من كافة أنحاء دمنهور, وقد اشتهر المسجد بدوره السياسي البارز، حيث ظل على مدى التاريخ قبلة للمظاهرات والاحتجاجات ضد الطغاة والظالمين، وكان شاهد عيان
-
-على جميع الاحتجاجات التي قامت بها القوى السياسية قبل وبعد ثورة الخامس والعشرين من يناير، وكان دوما نقطة انطلاق لجميع حشودهم ومسيراتهم الاحتجاجية نظرا لموقعه الفريد فى قلب المدينة وحجمه الكبير الذي يتسع لآلاف المصلين.
-
-
-
+                        يقع مسجد التوبة في شارع عرابي بالقرب من محطة السكة الحديد بمدينة دمنهور، 
+                        ويُعد من أقدم وأهم المساجد في مصر والشمال الإفريقي.  
+                        شُيّد المسجد على يد <strong>عمرو بن العاص</strong> رضي الله عنه سنة <strong>21هـ</strong> 
+                        قبل فتح الإسكندرية، ليصبح ثاني مسجد يُبنى في أفريقيا بعد مسجده في الفسطاط.
                     </p>
+                </div>
 
+                <div class="detail-card">
+                    <h2><i class="fas fa-archway"></i> القيمة التاريخية والمعمارية</h2>
+                    <p>
+                        يُعد المسجد تحفة من تحف العمارة الإسلامية المبكرة، 
+                        ويضم عمودًا نادرًا من الرخام الخالص يُعد من أجود أنواع الرخام في العالم.  
+                        اكتسب المسجد اسمه من كونه مقصدًا للتائبين والأوّابين الذين يقصدونه طلبًا للسكينة والعودة إلى الله.  
+                        وبفضل موقعه المميز في قلب دمنهور ومساحته الواسعة التي تستوعب آلاف المصلين، 
+                        ظل المسجد مركزًا دينيًا وروحيًا لأهالي المدينة عبر القرون.
+                    </p>
+                </div>
+
+                <div class="detail-card">
+                    <h2><i class="fas fa-users"></i> دوره الاجتماعي والسياسي</h2>
+                    <p>
+                        يلعب المسجد دورًا اجتماعيًا بارزًا، حيث يضم <strong>معهد إعداد الدعاة</strong> 
+                        ودارًا لتحفيظ القرآن الكريم وفصول تقوية للطلاب، 
+                        مما جعله مركزًا تعليميًا وتربويًا مؤثرًا في دمنهور.  
+                        كما ارتبط المسجد بالأحداث السياسية في مصر، 
+                        إذ كان نقطة انطلاق للمظاهرات والتحركات الشعبية ضد الظلم والطغيان، 
+                        خاصة قبل وبعد ثورة 25 يناير، ليصبح شاهدًا حيًا على تاريخ المدينة ونضال أهلها.
+                    </p>
                 </div>
 
 <!-- 
