--- a/specific-tabs/zaglol.html
+++ b/specific-tabs/zaglol.html
@@ -28,6 +28,7 @@
 
             <!-- المعلومات التفصيلية -->
             <h1 class="h11">مسجد زغلول</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">Zaghloul Mosque</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -39,24 +40,37 @@
                     <p>يتميز المبنى بتصميم معماري فريد يجمع بين الأصالة والحداثة، حيث تظهر الواجهات الزجاجية الحديثة مع لمسات من الفن الإسلامي في الزخارف والنقوش. تبلغ سعة المسرح الرئيسي حوالي 1000 متفرج.</p>
                 </div> -->
 
-                <div class="detail-card">
-                    <h2> معلومات</h2>
-                    <p>
+<div class="detail-card">
+    <h2><i class="fas fa-mosque"></i> مسجد زغلول</h2>
+    <p>
+        يعد مسجد زغلول أحد أكبر وأقدم مساجد مدينة رشيد، ويُعتبر مركزًا للحركة العلمية والدينية والوطنية في المدينة.  
+        انطلقت منه شرارة المقاومة الشعبية ضد الحملة الفرنسية 1801 وحملة فريزر 1807.
+    </p>
+</div>
 
-مسجد زغلول هو أحد أكبر مساجد مدينة رشيد وأقدمها، ويرجع تاريخ بنائه إلى عصر الدولة المملوكية، وكان مركزًا للحركة العلمية والدينية والوطنية، ومنه انطلقت شرارة المقاومة الشعبية ضد الحملة الفرنسية 1801، وحملة فريزر 1807
-<br>
-يعود تاريخ بناء مسجد زغلول الأثرى لعام 985 هـ ــ 1587م، بالجزء الجنوبى لمدينة رشيد. وسمى بهذا الاسم نسبة لمؤسسه زغلول، وهو أحد مماليك هارون، الذي عاش في القرن السابع عشر، ويوجد به ضريح «زغلول».
+<div class="detail-card">
+    <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
+    <p>
+        بُني المسجد في عام 985 هـ / 1587م على يد زغلول، مملوك السيد هارون، أحد أمراء القرن السابع عشر الميلادي،  
+        ويضم ضريح زغلول. المسجد مسجل ضمن آثار سجل الآثار الإسلامية والقبطية، ويعكس الطراز العثماني المتأخر عن العصر المملوكي.
+    </p>
+</div>
 
-<br>
-يقع المسجد الذي أسسه زغلول، مملوك السيد هارون أحد أمراء القرن السابع عشر الميلادي وذلك على الطراز العثماني (في عام 955 هجرية في نهاية العصر المملوكي)، في الجزء الجنوبى لمدينة رشيد وهو مسجل أثر في سجل الآثار الإسلامية والقبطية، وهو عبارة عن جامعين متصلين ببعضهما، ويبلغ طوله 90 مترا، وعرضه48 مترا، وكان يحتوي علي244 عمودا من الرخام والجرانيت، وأنشئ سقفه علي شكل قباب صغيرة، وبه حديقة مغروس بها النخيل، وبداخله ضريح زغلول.
-<br>
-في عام 2018 افتتح الدكتور خالد العناني، وزير الآثار، والدكتور محمد مختار جمعة، وزير الأوقاف، المرحلة الأولى من ترميم مسجد زغلول الأثري بمدينة رشيد بمحافظة البحيرة. حضر مراسم الافتتاح المهندس وعد الله أبوالعلا، رئيس قطاع المشروعات، والدكتور جمال مصطفى، رئيس قطاع الآثار الإسلامية والقبطية واليهودية، ومحمد عباس، عضو مجلس النواب عن دائرة رشيد، وسكرتير عام محافظة البحيرة، وأدوا صلاة الظهر داخل المسجد.
+<div class="detail-card">
+    <h2><i class="fas fa-archway"></i> الطراز المعماري والمميزات</h2>
+    <p>
+        يمتد المسجد على طول 90 مترًا وعرض 48 مترًا، ويضم 244 عمودًا من الرخام والجرانيت، مع سقوف على شكل قباب صغيرة وحديقة مغروسة بالنخيل.  
+        يجمع المسجد بين الطراز العثماني والفن المملوكي التقليدي، ويضم جامعين متصلين ببعضهما.
+    </p>
+</div>
 
-
-
-                    </p>
-
-                </div>
+<div class="detail-card">
+    <h2><i class="fas fa-tools"></i> الترميم والتطوير</h2>
+    <p>
+        في عام 2018 افتتح وزير الآثار والدين المرحلة الأولى من ترميم مسجد زغلول الأثري،  
+        بحضور مسؤولي الآثار والأوقاف وأعضاء مجلس النواب، حيث تم الحفاظ على التراث العمراني للمسجد وإقامة صلوات داخل المسجد بعد الترميم.
+    </p>
+</div>
 
 <!-- 
                 <div class="quote-box">
